commit bilingual contents

--- a/docs/visual-basic/misc/bc30300.md
+++ b/docs/visual-basic/misc/bc30300.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri facoltativi
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per i parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30300
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30300
 ms.assetid: adb44ceb-57a0-4123-8fd8-7eb83c3f601f
-ms.openlocfilehash: 2c7521777f45133b8c58b9de3db550fcba786fce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c1bd6300d62b489ab723cec3bc877325d92403bb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663957"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406223"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-optional-parameters"></a><span data-ttu-id="f026e-102">«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="f026e-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by optional parameters</span></span>
-<span data-ttu-id="f026e-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="f026e-103">You have attempted to overload a method with another method that differs from the first only in its optional parameters.</span></span> <span data-ttu-id="f026e-104">Un metodo con un parametro facoltativo è equivalente a due metodi di overload, uno con il parametro facoltativo e l'altro senza.</span><span class="sxs-lookup"><span data-stu-id="f026e-104">A method with an optional parameter is equivalent to two overloaded methods, one with the optional parameter, and the other without it.</span></span> <span data-ttu-id="f026e-105">Non è quindi possibile eseguire l'overload di un metodo con un elenco di argomenti corrispondente a uno di questi.</span><span class="sxs-lookup"><span data-stu-id="f026e-105">Therefore, you cannot overload a method with an argument list corresponding to either of these.</span></span>  
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-optional-parameters"></a><span data-ttu-id="eb170-102">' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per i parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="eb170-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by optional parameters</span></span>
+<span data-ttu-id="eb170-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="eb170-103">You have attempted to overload a method with another method that differs from the first only in its optional parameters.</span></span> <span data-ttu-id="eb170-104">Un metodo con un parametro facoltativo è equivalente a due metodi di overload, uno con il parametro facoltativo e l'altro senza.</span><span class="sxs-lookup"><span data-stu-id="eb170-104">A method with an optional parameter is equivalent to two overloaded methods, one with the optional parameter, and the other without it.</span></span> <span data-ttu-id="eb170-105">Non è quindi possibile eseguire l'overload di un metodo con un elenco di argomenti corrispondente a uno di questi.</span><span class="sxs-lookup"><span data-stu-id="eb170-105">Therefore, you cannot overload a method with an argument list corresponding to either of these.</span></span>  
   
- <span data-ttu-id="f026e-106">**ID errore:** BC30300</span><span class="sxs-lookup"><span data-stu-id="f026e-106">**Error ID:** BC30300</span></span>  
+ <span data-ttu-id="eb170-106">**ID errore:** BC30300</span><span class="sxs-lookup"><span data-stu-id="eb170-106">**Error ID:** BC30300</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f026e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f026e-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="eb170-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="eb170-107">To correct this error</span></span>  
   
-- <span data-ttu-id="f026e-108">Verificare che i metodi non si differenzino solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="f026e-108">Ensure that the methods are differentiated by more than optional parameters.</span></span>  
+- <span data-ttu-id="eb170-108">Verificare che i metodi non si differenzino solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="eb170-108">Ensure that the methods are differentiated by more than optional parameters.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f026e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f026e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="eb170-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="eb170-109">See also</span></span>
 
-- [<span data-ttu-id="f026e-110">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="f026e-110">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="f026e-111">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="f026e-111">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [<span data-ttu-id="eb170-110">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="eb170-110">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="eb170-111">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="eb170-111">Considerations in Overloading Procedures</span></span>](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
