--- a/docs/visual-basic/misc/bc30332.md
+++ b/docs/visual-basic/misc/bc30332.md
@@ -1,5 +1,5 @@
 ---
-title: Valore di tipo '<type1>'non può essere convertito in'<type2>'perché'<type3>'non è derivato da'<type4>'
+title: Non è possibile convertire il valore di tipo ' <type1> ' in ' <type2> ' perché' <type3> ' non è derivato da' <type4> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30332
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30332
 ms.assetid: 290081f8-eeb5-4b5c-818b-7159fe91f1ec
-ms.openlocfilehash: 6b9b9a7a32c2901b3f5e2e3be93c3cd329da77ce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4ea3a6de03c1972295b4ca172482c7f2d77456bc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663830"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406119"
 ---
-# <a name="value-of-type-type1-cannot-be-converted-to-type2-because-type3-is-not-derived-from-type4"></a><span data-ttu-id="19443-102">Valore di tipo '\<type1 >' non può essere convertito in '\<type2 >' perché '\<type3 >' non è derivato da '\<type4 >'</span><span class="sxs-lookup"><span data-stu-id="19443-102">Value of type '\<type1>' cannot be converted to '\<type2>' because '\<type3>' is not derived from '\<type4>'</span></span>
-<span data-ttu-id="19443-103">Un'istruzione tenta di convertire un tipo di matrice in un altro tipo di matrice in una situazione in cui i tipi di dati degli elementi delle matrici non sono entrambi tipi riferimento o in cui una conversione verso un tipo di dati più grande o più piccolo non è possibile tra i tipi di elemento delle due matrici.</span><span class="sxs-lookup"><span data-stu-id="19443-103">A statement attempts to convert an array type to another array type in a situation where the data types of the elements of the arrays are not both reference types, or where a conversion, either widening or narrowing, is not possible between the element types of the two arrays.</span></span>  
+# <a name="value-of-type-type1-cannot-be-converted-to-type2-because-type3-is-not-derived-from-type4"></a><span data-ttu-id="e753e-102">Non è possibile convertire il valore di tipo ' \<type1> ' in ' \<type2> ' perché' \<type3> ' non è derivato da' \<type4> '</span><span class="sxs-lookup"><span data-stu-id="e753e-102">Value of type '\<type1>' cannot be converted to '\<type2>' because '\<type3>' is not derived from '\<type4>'</span></span>
+<span data-ttu-id="e753e-103">Un'istruzione tenta di convertire un tipo di matrice in un altro tipo di matrice in una situazione in cui i tipi di dati degli elementi delle matrici non sono entrambi tipi riferimento o in cui una conversione verso un tipo di dati più grande o più piccolo non è possibile tra i tipi di elemento delle due matrici.</span><span class="sxs-lookup"><span data-stu-id="e753e-103">A statement attempts to convert an array type to another array type in a situation where the data types of the elements of the arrays are not both reference types, or where a conversion, either widening or narrowing, is not possible between the element types of the two arrays.</span></span>  
   
- <span data-ttu-id="19443-104">**ID errore:** BC30332</span><span class="sxs-lookup"><span data-stu-id="19443-104">**Error ID:** BC30332</span></span>  
+ <span data-ttu-id="e753e-104">**ID errore:** BC30332</span><span class="sxs-lookup"><span data-stu-id="e753e-104">**Error ID:** BC30332</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="19443-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="19443-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e753e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e753e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="19443-106">Controllare i tipi di dati degli elementi di entrambe le matrici per determinare l'origine dell'errore.</span><span class="sxs-lookup"><span data-stu-id="19443-106">Check the data types of the elements of both arrays to determine the source of the error.</span></span>  
+- <span data-ttu-id="e753e-106">Controllare i tipi di dati degli elementi di entrambe le matrici per determinare l'origine dell'errore.</span><span class="sxs-lookup"><span data-stu-id="e753e-106">Check the data types of the elements of both arrays to determine the source of the error.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="19443-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="19443-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e753e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e753e-107">See also</span></span>
 
-- [<span data-ttu-id="19443-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="19443-108">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
-- [<span data-ttu-id="19443-109">Conversioni di matrice</span><span class="sxs-lookup"><span data-stu-id="19443-109">Array Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/array-conversions.md)
+- [<span data-ttu-id="e753e-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="e753e-108">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="e753e-109">Conversioni di matrice</span><span class="sxs-lookup"><span data-stu-id="e753e-109">Array Conversions</span></span>](../programming-guide/language-features/data-types/array-conversions.md)
