--- a/docs/visual-basic/misc/bc31150.md
+++ b/docs/visual-basic/misc/bc31150.md
@@ -1,5 +1,5 @@
 ---
-title: Tag di fine <-tagName > previsto
+title: È previsto il tag di fine <-tagName>
 ms.date: 07/20/2015
 f1_keywords:
 - bc31150
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31150
 ms.assetid: 92cd9fef-29f0-446b-b7a5-229a8e345fae
-ms.openlocfilehash: ad7f0238fb7ab814af640b84a1a8637f06e75c67
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6821884eb2d9ab60db054216ff456fa09183dd73
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591956"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403641"
 ---
-# <a name="end-tag-tagname-expected"></a><span data-ttu-id="e7153-102">Tag di fine \</tagName > previsto</span><span class="sxs-lookup"><span data-stu-id="e7153-102">End tag \</tagName> expected</span></span>
-<span data-ttu-id="e7153-103">Il tag di fine in un valore letterale elemento XML non corrisponde al tag di inizio corrispondente.</span><span class="sxs-lookup"><span data-stu-id="e7153-103">The end tag in an XML element literal does not match the corresponding start tag.</span></span>  
+# <a name="end-tag-tagname-expected"></a><span data-ttu-id="09d5e-102">È previsto un tag di fine \</tagName></span><span class="sxs-lookup"><span data-stu-id="09d5e-102">End tag \</tagName> expected</span></span>
+<span data-ttu-id="09d5e-103">Il tag di fine in un valore letterale elemento XML non corrisponde al tag di inizio corrispondente.</span><span class="sxs-lookup"><span data-stu-id="09d5e-103">The end tag in an XML element literal does not match the corresponding start tag.</span></span>  
   
- <span data-ttu-id="e7153-104">**ID errore:** BC31150</span><span class="sxs-lookup"><span data-stu-id="e7153-104">**Error ID:** BC31150</span></span>  
+ <span data-ttu-id="09d5e-104">**ID errore:** BC31150</span><span class="sxs-lookup"><span data-stu-id="09d5e-104">**Error ID:** BC31150</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e7153-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e7153-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="09d5e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="09d5e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="e7153-106">Modificare il tag XML di fine in modo che corrisponda al tag XML di inizio per il valore letterale elemento XML.</span><span class="sxs-lookup"><span data-stu-id="e7153-106">Modify the end XML tag to match the start XML tag for the XML element literal.</span></span>  
+- <span data-ttu-id="09d5e-106">Modificare il tag XML di fine in modo che corrisponda al tag XML di inizio per il valore letterale elemento XML.</span><span class="sxs-lookup"><span data-stu-id="09d5e-106">Modify the end XML tag to match the start XML tag for the XML element literal.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e7153-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e7153-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="09d5e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="09d5e-107">See also</span></span>
 
-- [<span data-ttu-id="e7153-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="e7153-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="e7153-109">XML</span><span class="sxs-lookup"><span data-stu-id="e7153-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="09d5e-108">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="09d5e-108">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="09d5e-109">XML</span><span class="sxs-lookup"><span data-stu-id="09d5e-109">XML</span></span>](../programming-guide/language-features/xml/index.md)
