--- a/docs/visual-basic/misc/bc32118.md
+++ b/docs/visual-basic/misc/bc32118.md
@@ -1,5 +1,5 @@
 ---
-title: Non accessibile '<genericprocedurename>' accetta questo numero di argomenti tipo
+title: Nessun '<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32118
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32118
 ms.assetid: 4ee942ba-0fa1-4ec1-9c2c-a0c0dc3f1b17
-ms.openlocfilehash: d2d4758b42290d4db90dbe654e87ea6fe3c7b118
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6133d7fa134ddda76985dcfbffc4cf125b4e67e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640147"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407093"
 ---
-# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="4160a-102">Non accessibile '\<nomeroutinegenerica >' accetta questo numero di argomenti tipo</span><span class="sxs-lookup"><span data-stu-id="4160a-102">No accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
-<span data-ttu-id="4160a-103">Un'istruzione chiama una routine generica con più versioni di overload, ma nessuna di tali versioni definisce un numero di parametri di tipo equivalente al numero di argomenti di tipo forniti nella chiamata.</span><span class="sxs-lookup"><span data-stu-id="4160a-103">A statement calls a generic procedure that has more than one overloaded version, but none of the overloaded versions defines the same number of type parameters as the number of type arguments supplied in the call.</span></span>  
+# <a name="no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="dd7b4-102">Nessun '\<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="dd7b4-102">No accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
+<span data-ttu-id="dd7b4-103">Un'istruzione chiama una routine generica con più versioni di overload, ma nessuna di tali versioni definisce un numero di parametri di tipo equivalente al numero di argomenti di tipo forniti nella chiamata.</span><span class="sxs-lookup"><span data-stu-id="dd7b4-103">A statement calls a generic procedure that has more than one overloaded version, but none of the overloaded versions defines the same number of type parameters as the number of type arguments supplied in the call.</span></span>  
   
- <span data-ttu-id="4160a-104">In presenza di un'unica versione generica, è possibile chiamarla senza argomenti di tipo e il compilatore potrà tentare una *inferenza del tipo*.</span><span class="sxs-lookup"><span data-stu-id="4160a-104">If there is only one generic version, you call it without type arguments, and the compiler can attempt *type inference*.</span></span> <span data-ttu-id="4160a-105">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="4160a-105">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span> <span data-ttu-id="4160a-106">In presenza di più versioni generiche, tuttavia, il compilatore non riesce a effettuare una scelta se non vengono forniti gli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="4160a-106">However, if there is more than one generic version, the compiler is not able to choose among them unless you supply type arguments.</span></span> <span data-ttu-id="4160a-107">Se viene fornito un solo argomento di tipo, è necessario fornirne uno per ogni parametro di tipo definito da una delle versioni di overload.</span><span class="sxs-lookup"><span data-stu-id="4160a-107">If you supply one type argument, you must supply a type argument for every type parameter that one of the overloaded versions defines.</span></span>  
+ <span data-ttu-id="dd7b4-104">In presenza di un'unica versione generica, è possibile chiamarla senza argomenti di tipo e il compilatore potrà tentare una *inferenza del tipo*.</span><span class="sxs-lookup"><span data-stu-id="dd7b4-104">If there is only one generic version, you call it without type arguments, and the compiler can attempt *type inference*.</span></span> <span data-ttu-id="dd7b4-105">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="dd7b4-105">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span></span> <span data-ttu-id="dd7b4-106">In presenza di più versioni generiche, tuttavia, il compilatore non riesce a effettuare una scelta se non vengono forniti gli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="dd7b4-106">However, if there is more than one generic version, the compiler is not able to choose among them unless you supply type arguments.</span></span> <span data-ttu-id="dd7b4-107">Se viene fornito un solo argomento di tipo, è necessario fornirne uno per ogni parametro di tipo definito da una delle versioni di overload.</span><span class="sxs-lookup"><span data-stu-id="dd7b4-107">If you supply one type argument, you must supply a type argument for every type parameter that one of the overloaded versions defines.</span></span>  
   
- <span data-ttu-id="4160a-108">**ID errore:** BC32118</span><span class="sxs-lookup"><span data-stu-id="4160a-108">**Error ID:** BC32118</span></span>  
+ <span data-ttu-id="dd7b4-108">**ID errore:** BC32118</span><span class="sxs-lookup"><span data-stu-id="dd7b4-108">**Error ID:** BC32118</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4160a-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4160a-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dd7b4-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dd7b4-109">To correct this error</span></span>  
   
-- <span data-ttu-id="4160a-110">Decidere la versione di overload da chiamare e fornire il numero adeguato di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="4160a-110">Decide which overloaded version you want to call, and then supply the appropriate number of type arguments.</span></span>  
+- <span data-ttu-id="dd7b4-110">Decidere la versione di overload da chiamare e fornire il numero adeguato di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="dd7b4-110">Decide which overloaded version you want to call, and then supply the appropriate number of type arguments.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4160a-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4160a-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dd7b4-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dd7b4-111">See also</span></span>
 
-- [<span data-ttu-id="4160a-112">Overload</span><span class="sxs-lookup"><span data-stu-id="4160a-112">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
-- [<span data-ttu-id="4160a-113">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="4160a-113">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="4160a-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4160a-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="4160a-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4160a-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="dd7b4-112">Overload</span><span class="sxs-lookup"><span data-stu-id="dd7b4-112">Overloads</span></span>](../language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="dd7b4-113">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="dd7b4-113">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="dd7b4-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dd7b4-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="dd7b4-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dd7b4-115">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
