--- a/docs/visual-basic/misc/bc30027.md
+++ b/docs/visual-basic/misc/bc30027.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30027
 ms.assetid: 5ee1a8ae-d0cb-437d-966e-aba0ea4d3106
-ms.openlocfilehash: b4f5411b035c31449758eab4f71cdf46e39a9114
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1f31033d091fbf3774cc0f511bb8e678b222f276
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64608895"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84404044"
 ---
-# <a name="end-function-expected"></a><span data-ttu-id="a30b8-102">Previsto 'End Function'</span><span class="sxs-lookup"><span data-stu-id="a30b8-102">'End Function' expected</span></span>
-<span data-ttu-id="a30b8-103">Un'istruzione `End` deve corrispondere al blocco che termina.</span><span class="sxs-lookup"><span data-stu-id="a30b8-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="a30b8-104">Una definizione della routine `Function` non è stata terminata correttamente.</span><span class="sxs-lookup"><span data-stu-id="a30b8-104">A `Function` procedure definition has not been properly terminated.</span></span>  
+# <a name="end-function-expected"></a><span data-ttu-id="60958-102">Previsto 'End Function'</span><span class="sxs-lookup"><span data-stu-id="60958-102">'End Function' expected</span></span>
+<span data-ttu-id="60958-103">Un'istruzione `End` deve corrispondere al blocco che termina.</span><span class="sxs-lookup"><span data-stu-id="60958-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="60958-104">Una definizione della routine `Function` non è stata terminata correttamente.</span><span class="sxs-lookup"><span data-stu-id="60958-104">A `Function` procedure definition has not been properly terminated.</span></span>  
   
- <span data-ttu-id="a30b8-105">**ID errore:** BC30027</span><span class="sxs-lookup"><span data-stu-id="a30b8-105">**Error ID:** BC30027</span></span>  
+ <span data-ttu-id="60958-105">**ID errore:** BC30027</span><span class="sxs-lookup"><span data-stu-id="60958-105">**Error ID:** BC30027</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a30b8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a30b8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="60958-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="60958-106">To correct this error</span></span>  
   
-- <span data-ttu-id="a30b8-107">Aggiungere un'istruzione `End Function` alla fine della routine.</span><span class="sxs-lookup"><span data-stu-id="a30b8-107">Add an `End Function` statement to the end of the procedure.</span></span>  
+- <span data-ttu-id="60958-107">Aggiungere un'istruzione `End Function` alla fine della routine.</span><span class="sxs-lookup"><span data-stu-id="60958-107">Add an `End Function` statement to the end of the procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a30b8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a30b8-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="60958-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="60958-108">See also</span></span>
 
-- [<span data-ttu-id="a30b8-109">Routine Function</span><span class="sxs-lookup"><span data-stu-id="a30b8-109">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="a30b8-110">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="a30b8-110">End Statement</span></span>](../../visual-basic/language-reference/statements/end-statement.md)
+- [<span data-ttu-id="60958-109">Routine Function</span><span class="sxs-lookup"><span data-stu-id="60958-109">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="60958-110">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="60958-110">End Statement</span></span>](../language-reference/statements/end-statement.md)
