--- a/docs/visual-basic/misc/bc30181.md
+++ b/docs/visual-basic/misc/bc30181.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30181
 ms.assetid: 1f272403-8e11-4811-a499-8ca14077a463
-ms.openlocfilehash: c2fd83ab1f230928678794e2da0b2418e4ae10b0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cce3e276c6e3209c8b8c2850da0dc6dbafa05ffd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627505"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403992"
 ---
-# <a name="specifiers-valid-only-at-the-beginning-of-a-declaration"></a><span data-ttu-id="4126f-102">Gli identificatori sono validi solo all'inizio di una dichiarazione</span><span class="sxs-lookup"><span data-stu-id="4126f-102">Specifiers valid only at the beginning of a declaration</span></span>
-<span data-ttu-id="4126f-103">Le parole chiave che specificano l'accessibilità e altre designazioni devono trovarsi prima della parola chiave di dichiarazione, ad esempio `Dim` o `Function`.</span><span class="sxs-lookup"><span data-stu-id="4126f-103">Keywords specifying accessibility and other designations must appear before the declaration keyword, such as `Dim` or `Function`.</span></span>  
+# <a name="specifiers-valid-only-at-the-beginning-of-a-declaration"></a><span data-ttu-id="a3977-102">Gli identificatori sono validi solo all'inizio di una dichiarazione</span><span class="sxs-lookup"><span data-stu-id="a3977-102">Specifiers valid only at the beginning of a declaration</span></span>
+<span data-ttu-id="a3977-103">Le parole chiave che specificano l'accessibilità e altre designazioni devono trovarsi prima della parola chiave di dichiarazione, ad esempio `Dim` o `Function`.</span><span class="sxs-lookup"><span data-stu-id="a3977-103">Keywords specifying accessibility and other designations must appear before the declaration keyword, such as `Dim` or `Function`.</span></span>  
   
- <span data-ttu-id="4126f-104">**ID errore:** BC30181</span><span class="sxs-lookup"><span data-stu-id="4126f-104">**Error ID:** BC30181</span></span>  
+ <span data-ttu-id="a3977-104">**ID errore:** BC30181</span><span class="sxs-lookup"><span data-stu-id="a3977-104">**Error ID:** BC30181</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4126f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4126f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a3977-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a3977-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4126f-106">Spostare tutti gli identificatori tra l'elenco degli attributi, se presente, e la parola chiave di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="4126f-106">Move all specifiers between the attribute list (if any) and the declaration keyword.</span></span>  
+- <span data-ttu-id="a3977-106">Spostare tutti gli identificatori tra l'elenco degli attributi, se presente, e la parola chiave di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="a3977-106">Move all specifiers between the attribute list (if any) and the declaration keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4126f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4126f-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a3977-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a3977-107">See also</span></span>
 
-- [<span data-ttu-id="4126f-108">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="4126f-108">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="4126f-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="4126f-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="4126f-110">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="4126f-110">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
-- [<span data-ttu-id="4126f-111">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="4126f-111">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="4126f-112">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="4126f-112">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="a3977-108">Istruzione Class</span><span class="sxs-lookup"><span data-stu-id="a3977-108">Class Statement</span></span>](../language-reference/statements/class-statement.md)
+- [<span data-ttu-id="a3977-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="a3977-109">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="a3977-110">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="a3977-110">Function Statement</span></span>](../language-reference/statements/function-statement.md)
+- [<span data-ttu-id="a3977-111">Property Statement</span><span class="sxs-lookup"><span data-stu-id="a3977-111">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="a3977-112">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="a3977-112">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
