--- a/docs/visual-basic/misc/bc30192.md
+++ b/docs/visual-basic/misc/bc30192.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30192
 ms.assetid: 7f7e1ef9-090a-49dc-9dc2-8900fa90ff72
-ms.openlocfilehash: fd2f37bb03e4f08efac4762e8468b04eb6d35a5d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e20f36e33c52d3b266fe2ddd80d80d5efd2b230c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64611549"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403914"
 ---
-# <a name="end-of-parameter-list-expected"></a><span data-ttu-id="54d9a-102">È prevista la fine dell'elenco parametri</span><span class="sxs-lookup"><span data-stu-id="54d9a-102">End of parameter list expected</span></span>
-<span data-ttu-id="54d9a-103">Una specifica `ParamArray` è seguita da una o più specifiche di argomento in una dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="54d9a-103">A `ParamArray` specification is followed by one or more other argument specifications in a procedure declaration.</span></span>  
+# <a name="end-of-parameter-list-expected"></a><span data-ttu-id="ff476-102">È prevista la fine dell'elenco parametri</span><span class="sxs-lookup"><span data-stu-id="ff476-102">End of parameter list expected</span></span>
+<span data-ttu-id="ff476-103">Una specifica `ParamArray` è seguita da una o più specifiche di argomento in una dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="ff476-103">A `ParamArray` specification is followed by one or more other argument specifications in a procedure declaration.</span></span>  
   
- <span data-ttu-id="54d9a-104">**ID errore:** BC30192</span><span class="sxs-lookup"><span data-stu-id="54d9a-104">**Error ID:** BC30192</span></span>  
+ <span data-ttu-id="ff476-104">**ID errore:** BC30192</span><span class="sxs-lookup"><span data-stu-id="ff476-104">**Error ID:** BC30192</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="54d9a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="54d9a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ff476-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ff476-105">To correct this error</span></span>  
   
-- <span data-ttu-id="54d9a-106">Spostare `ParamArray` alla fine dell'elenco degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="54d9a-106">Move the `ParamArray` to the end of the argument list.</span></span>  
+- <span data-ttu-id="ff476-106">Spostare `ParamArray` alla fine dell'elenco degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="ff476-106">Move the `ParamArray` to the end of the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="54d9a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="54d9a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ff476-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ff476-107">See also</span></span>
 
-- [<span data-ttu-id="54d9a-108">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="54d9a-108">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="ff476-108">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="ff476-108">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
