--- a/docs/visual-basic/misc/bc30233.md
+++ b/docs/visual-basic/misc/bc30233.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di costante"
+title: "' <specifier> ' non valido in una dichiarazione di costante"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30233
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30233
 ms.assetid: 6f01278c-0404-4282-b42e-c750e6907ee9
-ms.openlocfilehash: abed341f65ac6a7f670d81982cf9e8bebe39f17d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4fad1373d25fab860655b6c0b396ee18dd835c7e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027927"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402603"
 ---
-# <a name="specifier-is-not-valid-on-a-constant-declaration"></a><span data-ttu-id="41971-102">'\<identificatore >' non è valido in una dichiarazione di costante</span><span class="sxs-lookup"><span data-stu-id="41971-102">'\<specifier>' is not valid on a constant declaration</span></span>
-<span data-ttu-id="41971-103">Un'istruzione `Const` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="41971-103">A `Const` statement contains an invalid keyword.</span></span> <span data-ttu-id="41971-104">Un'istruzione `Const` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`o `Shadows` .</span><span class="sxs-lookup"><span data-stu-id="41971-104">A `Const` statement can include only the `Friend`, `Private`, `Protected`, `Public`, or `Shadows` keywords.</span></span>  
+# <a name="specifier-is-not-valid-on-a-constant-declaration"></a><span data-ttu-id="798b3-102">' \<specifier> ' non valido in una dichiarazione di costante</span><span class="sxs-lookup"><span data-stu-id="798b3-102">'\<specifier>' is not valid on a constant declaration</span></span>
+<span data-ttu-id="798b3-103">Un'istruzione `Const` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="798b3-103">A `Const` statement contains an invalid keyword.</span></span> <span data-ttu-id="798b3-104">Un'istruzione `Const` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`o `Shadows` .</span><span class="sxs-lookup"><span data-stu-id="798b3-104">A `Const` statement can include only the `Friend`, `Private`, `Protected`, `Public`, or `Shadows` keywords.</span></span>  
   
- <span data-ttu-id="41971-105">**ID errore:** BC30233</span><span class="sxs-lookup"><span data-stu-id="41971-105">**Error ID:** BC30233</span></span>  
+ <span data-ttu-id="798b3-105">**ID errore:** BC30233</span><span class="sxs-lookup"><span data-stu-id="798b3-105">**Error ID:** BC30233</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="41971-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41971-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="798b3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="798b3-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="41971-107">Verificare che la parola chiave sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="41971-107">Ensure that the keyword is spelled correctly.</span></span>  
+1. <span data-ttu-id="798b3-107">Verificare che la parola chiave sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="798b3-107">Ensure that the keyword is spelled correctly.</span></span>  
   
-2. <span data-ttu-id="41971-108">Rimuovere la parola chiave non valida dall'istruzione `Const` .</span><span class="sxs-lookup"><span data-stu-id="41971-108">Remove the invalid keyword from the `Const` statement.</span></span>  
+2. <span data-ttu-id="798b3-108">Rimuovere la parola chiave non valida dall'istruzione `Const` .</span><span class="sxs-lookup"><span data-stu-id="798b3-108">Remove the invalid keyword from the `Const` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="41971-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41971-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="798b3-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="798b3-109">See also</span></span>
 
-- [<span data-ttu-id="41971-110">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="41971-110">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+- [<span data-ttu-id="798b3-110">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="798b3-110">Const Statement</span></span>](../language-reference/statements/const-statement.md)
