--- a/docs/visual-basic/misc/bc30294.md
+++ b/docs/visual-basic/misc/bc30294.md
@@ -1,5 +1,5 @@
 ---
-title: "Struttura '<structurename>' non può contenere un'istanza di se stessa: <error>"
+title: "La struttura '<structurename>' non può contenere un'istanza di se stessa: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30294
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30294
 ms.assetid: 17780e11-2425-4860-9345-b5db019d2bf3
-ms.openlocfilehash: 14ed934243896472d6b53d8cd7498415ff7f4527
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b48a6e540085acfd95959fa0208c0ffc4983b92d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61976430"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406262"
 ---
-# <a name="structure-structurename-cannot-contain-an-instance-of-itself-error"></a><span data-ttu-id="9fcfe-102">Struttura»\<nomestruttura >' non può contenere un'istanza di se stessa: \<errore ></span><span class="sxs-lookup"><span data-stu-id="9fcfe-102">Structure '\<structurename>' cannot contain an instance of itself: \<error></span></span>
-<span data-ttu-id="9fcfe-103">Una struttura dichiara una variabile e la inizializza con un'istanza di se stessa.</span><span class="sxs-lookup"><span data-stu-id="9fcfe-103">A structure declares a variable and initializes it with an instance of itself.</span></span>  
+# <a name="structure-structurename-cannot-contain-an-instance-of-itself-error"></a><span data-ttu-id="d05be-102">La struttura '\<structurename>' non può contenere un'istanza di se stessa: \<error></span><span class="sxs-lookup"><span data-stu-id="d05be-102">Structure '\<structurename>' cannot contain an instance of itself: \<error></span></span>
+<span data-ttu-id="d05be-103">Una struttura dichiara una variabile e la inizializza con un'istanza di se stessa.</span><span class="sxs-lookup"><span data-stu-id="d05be-103">A structure declares a variable and initializes it with an instance of itself.</span></span>  
   
- <span data-ttu-id="9fcfe-104">Una struttura può contenere istanze di altre strutture, ma non un'istanza interna di se stessa.</span><span class="sxs-lookup"><span data-stu-id="9fcfe-104">A structure can contain instances of other structures, but not an internal instance of itself.</span></span> <span data-ttu-id="9fcfe-105">Un tentativo di eseguire questa operazione potrebbe causare una ricorsione infinita.</span><span class="sxs-lookup"><span data-stu-id="9fcfe-105">An attempt to do so would lead to infinite recursion.</span></span>  
+ <span data-ttu-id="d05be-104">Una struttura può contenere istanze di altre strutture, ma non un'istanza interna di se stessa.</span><span class="sxs-lookup"><span data-stu-id="d05be-104">A structure can contain instances of other structures, but not an internal instance of itself.</span></span> <span data-ttu-id="d05be-105">Un tentativo di eseguire questa operazione potrebbe causare una ricorsione infinita.</span><span class="sxs-lookup"><span data-stu-id="d05be-105">An attempt to do so would lead to infinite recursion.</span></span>  
   
- <span data-ttu-id="9fcfe-106">**ID errore:** BC30294</span><span class="sxs-lookup"><span data-stu-id="9fcfe-106">**Error ID:** BC30294</span></span>  
+ <span data-ttu-id="d05be-106">**ID errore:** BC30294</span><span class="sxs-lookup"><span data-stu-id="d05be-106">**Error ID:** BC30294</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9fcfe-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9fcfe-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d05be-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d05be-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="9fcfe-108">Controllare l'ortografia dell'espressione di inizializzazione nell'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="9fcfe-108">Check the spelling of the initialization expression in the declaration statement.</span></span>  
+1. <span data-ttu-id="d05be-108">Controllare l'ortografia dell'espressione di inizializzazione nell'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="d05be-108">Check the spelling of the initialization expression in the declaration statement.</span></span>  
   
-2. <span data-ttu-id="9fcfe-109">Se si intende creare un'altra istanza della stessa struttura, è necessario dichiararla e crearla al di fuori della struttura.</span><span class="sxs-lookup"><span data-stu-id="9fcfe-109">If you intend to create another instance of the same structure, you must declare and create it outside the structure.</span></span>  
+2. <span data-ttu-id="d05be-109">Se si intende creare un'altra istanza della stessa struttura, è necessario dichiararla e crearla al di fuori della struttura.</span><span class="sxs-lookup"><span data-stu-id="d05be-109">If you intend to create another instance of the same structure, you must declare and create it outside the structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9fcfe-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9fcfe-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d05be-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d05be-110">See also</span></span>
 
-- [<span data-ttu-id="9fcfe-111">Strutture</span><span class="sxs-lookup"><span data-stu-id="9fcfe-111">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
-- [<span data-ttu-id="9fcfe-112">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="9fcfe-112">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="d05be-111">Strutture</span><span class="sxs-lookup"><span data-stu-id="d05be-111">Structures</span></span>](../programming-guide/language-features/data-types/structures.md)
+- [<span data-ttu-id="d05be-112">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="d05be-112">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
