--- a/docs/visual-basic/misc/bc30305.md
+++ b/docs/visual-basic/misc/bc30305.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i valori predefiniti dei parametri facoltativi
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per i valori predefiniti dei parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30305
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30305
 ms.assetid: f07f925e-9f95-4885-bdba-eaba2d0483d8
-ms.openlocfilehash: a97bb261ada81743b79aeb6fb2fd9cfe53cbb271
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea04b128fc3940ed38fc2cecef9d8bde46a53f32
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663905"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406171"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-the-default-values-of-optional-parameters"></a><span data-ttu-id="e2ef5-102">«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i valori predefiniti dei parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="e2ef5-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by the default values of optional parameters</span></span>
-<span data-ttu-id="e2ef5-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="e2ef5-103">You have attempted to overload a method with another method that differs from the first only in its optional parameters.</span></span> <span data-ttu-id="e2ef5-104">Un metodo con un parametro facoltativo è equivalente a due metodi di overload, uno con il parametro facoltativo e l'altro senza.</span><span class="sxs-lookup"><span data-stu-id="e2ef5-104">A method with an optional parameter is equivalent to two overloaded methods, one with the optional parameter, and the other without it.</span></span> <span data-ttu-id="e2ef5-105">Non è quindi possibile eseguire l'overload di un metodo con un elenco di argomenti corrispondente a uno di questi.</span><span class="sxs-lookup"><span data-stu-id="e2ef5-105">Therefore, you cannot overload a method with an argument list corresponding to either of these.</span></span>  
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-the-default-values-of-optional-parameters"></a><span data-ttu-id="abe3b-102">' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per i valori predefiniti dei parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="abe3b-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by the default values of optional parameters</span></span>
+<span data-ttu-id="abe3b-103">Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="abe3b-103">You have attempted to overload a method with another method that differs from the first only in its optional parameters.</span></span> <span data-ttu-id="abe3b-104">Un metodo con un parametro facoltativo è equivalente a due metodi di overload, uno con il parametro facoltativo e l'altro senza.</span><span class="sxs-lookup"><span data-stu-id="abe3b-104">A method with an optional parameter is equivalent to two overloaded methods, one with the optional parameter, and the other without it.</span></span> <span data-ttu-id="abe3b-105">Non è quindi possibile eseguire l'overload di un metodo con un elenco di argomenti corrispondente a uno di questi.</span><span class="sxs-lookup"><span data-stu-id="abe3b-105">Therefore, you cannot overload a method with an argument list corresponding to either of these.</span></span>  
   
- <span data-ttu-id="e2ef5-106">**ID errore:** BC30305</span><span class="sxs-lookup"><span data-stu-id="e2ef5-106">**Error ID:** BC30305</span></span>  
+ <span data-ttu-id="abe3b-106">**ID errore:** BC30305</span><span class="sxs-lookup"><span data-stu-id="abe3b-106">**Error ID:** BC30305</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e2ef5-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e2ef5-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="abe3b-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="abe3b-107">To correct this error</span></span>  
   
-- <span data-ttu-id="e2ef5-108">Verificare che i metodi non si differenzino solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="e2ef5-108">Ensure that the methods are differentiated by more than only optional parameters.</span></span>  
+- <span data-ttu-id="abe3b-108">Verificare che i metodi non si differenzino solo per i parametri facoltativi.</span><span class="sxs-lookup"><span data-stu-id="abe3b-108">Ensure that the methods are differentiated by more than only optional parameters.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e2ef5-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e2ef5-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="abe3b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="abe3b-109">See also</span></span>
 
-- [<span data-ttu-id="e2ef5-110">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="e2ef5-110">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="e2ef5-111">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="e2ef5-111">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [<span data-ttu-id="abe3b-110">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="abe3b-110">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="abe3b-111">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="abe3b-111">Considerations in Overloading Procedures</span></span>](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
