--- a/docs/visual-basic/misc/bc30368.md
+++ b/docs/visual-basic/misc/bc30368.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ParamArray'
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per i parametri dichiarati come ' ParamArray '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30368
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30368
 ms.assetid: 6111df0c-fc3e-40b2-b536-effbd132ef72
-ms.openlocfilehash: 720638a46acbf3decf89dc57ff3c23104ce616f9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f11311801d09a35bc0287ff5e1ba0e3894afbe4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64636348"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403836"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-paramarray"></a><span data-ttu-id="4040f-102">«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ParamArray'</span><span class="sxs-lookup"><span data-stu-id="4040f-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by parameters declared 'ParamArray'</span></span>
-<span data-ttu-id="4040f-103">Si è provato a eseguire l'overload di due metodi che si differenziano solo per uno o più parametri `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="4040f-103">You have attempted to overload two methods that differ from each other only by a `ParamArray` parameter or parameters.</span></span> <span data-ttu-id="4040f-104">Per il compilatore, una routine con un parametro `ParamArray` ha un numero infinito di overload che si differenziano tra loro per ciò che viene passato alla matrice di parametri.</span><span class="sxs-lookup"><span data-stu-id="4040f-104">The compiler considers a procedure with a `ParamArray` parameter to have an infinite number of overloads differing from each other in what is passed to the parameter array.</span></span>  
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-paramarray"></a><span data-ttu-id="de5fe-102">' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per i parametri dichiarati come ' ParamArray '</span><span class="sxs-lookup"><span data-stu-id="de5fe-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by parameters declared 'ParamArray'</span></span>
+<span data-ttu-id="de5fe-103">Si è provato a eseguire l'overload di due metodi che si differenziano solo per uno o più parametri `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="de5fe-103">You have attempted to overload two methods that differ from each other only by a `ParamArray` parameter or parameters.</span></span> <span data-ttu-id="de5fe-104">Per il compilatore, una routine con un parametro `ParamArray` ha un numero infinito di overload che si differenziano tra loro per ciò che viene passato alla matrice di parametri.</span><span class="sxs-lookup"><span data-stu-id="de5fe-104">The compiler considers a procedure with a `ParamArray` parameter to have an infinite number of overloads differing from each other in what is passed to the parameter array.</span></span>  
   
- <span data-ttu-id="4040f-105">**ID errore:** BC30368</span><span class="sxs-lookup"><span data-stu-id="4040f-105">**Error ID:** BC30368</span></span>  
+ <span data-ttu-id="de5fe-105">**ID errore:** BC30368</span><span class="sxs-lookup"><span data-stu-id="de5fe-105">**Error ID:** BC30368</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4040f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4040f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="de5fe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="de5fe-106">To correct this error</span></span>  
   
-- <span data-ttu-id="4040f-107">Verificare che i metodi non si differenzino solo per i parametri `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="4040f-107">Make sure the methods are differentiated by more than the `ParamArray` parameters.</span></span>  
+- <span data-ttu-id="de5fe-107">Verificare che i metodi non si differenzino solo per i parametri `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="de5fe-107">Make sure the methods are differentiated by more than the `ParamArray` parameters.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4040f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4040f-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="de5fe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="de5fe-108">See also</span></span>
 
-- [<span data-ttu-id="4040f-109">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="4040f-109">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
-- [<span data-ttu-id="4040f-110">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="4040f-110">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="de5fe-109">Considerazioni sull'overload di routine</span><span class="sxs-lookup"><span data-stu-id="de5fe-109">Considerations in Overloading Procedures</span></span>](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [<span data-ttu-id="de5fe-110">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="de5fe-110">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
