--- a/docs/visual-basic/misc/bc30385.md
+++ b/docs/visual-basic/misc/bc30385.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione Delegate"
+title: "' <modifier> ' non valido in una dichiarazione di delegato"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30385
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30385
 ms.assetid: cacbcdc7-dca9-4a22-b3bf-7e264308c031
-ms.openlocfilehash: 4f6de1d507b91c31b06bbf24f1079783fa2cb8c7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b012409e2b57f28405de2640c84a62f787c8a8eb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61976040"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403693"
 ---
-# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a><span data-ttu-id="9a975-102">'\<modificatore >' non è valido in una dichiarazione Delegate</span><span class="sxs-lookup"><span data-stu-id="9a975-102">'\<modifier>' is not valid on a Delegate declaration</span></span>
-<span data-ttu-id="9a975-103">Si è provato a usare un modificatore, ad esempio `Shared`, in una dichiarazione di delegato.</span><span class="sxs-lookup"><span data-stu-id="9a975-103">You attempted to use a modifier, such as `Shared`, on a delegate declaration.</span></span> <span data-ttu-id="9a975-104">I delegati sono oggetti usati per chiamare i metodi di altri oggetti tramite la definizione di un costruttore a cui viene passata la specifica di un metodo di oggetto.</span><span class="sxs-lookup"><span data-stu-id="9a975-104">Delegates are objects used to call the methods of other objects, by defining a constructor that is passed the specification of an object method.</span></span> <span data-ttu-id="9a975-105">Non è consentito specificare un modificatore in una dichiarazione di delegato.</span><span class="sxs-lookup"><span data-stu-id="9a975-105">It is not valid to specify a modifier on a delegate declaration.</span></span>  
+# <a name="modifier-is-not-valid-on-a-delegate-declaration"></a><span data-ttu-id="5b741-102">' \<modifier> ' non valido in una dichiarazione di delegato</span><span class="sxs-lookup"><span data-stu-id="5b741-102">'\<modifier>' is not valid on a Delegate declaration</span></span>
+<span data-ttu-id="5b741-103">Si è provato a usare un modificatore, ad esempio `Shared`, in una dichiarazione di delegato.</span><span class="sxs-lookup"><span data-stu-id="5b741-103">You attempted to use a modifier, such as `Shared`, on a delegate declaration.</span></span> <span data-ttu-id="5b741-104">I delegati sono oggetti usati per chiamare i metodi di altri oggetti tramite la definizione di un costruttore a cui viene passata la specifica di un metodo di oggetto.</span><span class="sxs-lookup"><span data-stu-id="5b741-104">Delegates are objects used to call the methods of other objects, by defining a constructor that is passed the specification of an object method.</span></span> <span data-ttu-id="5b741-105">Non è consentito specificare un modificatore in una dichiarazione di delegato.</span><span class="sxs-lookup"><span data-stu-id="5b741-105">It is not valid to specify a modifier on a delegate declaration.</span></span>  
   
- <span data-ttu-id="9a975-106">**ID errore:** BC30385</span><span class="sxs-lookup"><span data-stu-id="9a975-106">**Error ID:** BC30385</span></span>  
+ <span data-ttu-id="5b741-106">**ID errore:** BC30385</span><span class="sxs-lookup"><span data-stu-id="5b741-106">**Error ID:** BC30385</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9a975-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9a975-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5b741-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5b741-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="9a975-108">Rimuovere il modificatore.</span><span class="sxs-lookup"><span data-stu-id="9a975-108">Remove the modifier.</span></span>  
+1. <span data-ttu-id="5b741-108">Rimuovere il modificatore.</span><span class="sxs-lookup"><span data-stu-id="5b741-108">Remove the modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9a975-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9a975-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5b741-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5b741-109">See also</span></span>
 
-- [<span data-ttu-id="9a975-110">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="9a975-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="9a975-111">Procedura: Richiamare un metodo delegato</span><span class="sxs-lookup"><span data-stu-id="9a975-111">How to: Invoke a Delegate Method</span></span>](../../visual-basic/programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
+- [<span data-ttu-id="5b741-110">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="5b741-110">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="5b741-111">Procedura: richiamare un metodo delegato</span><span class="sxs-lookup"><span data-stu-id="5b741-111">How to: Invoke a Delegate Method</span></span>](../programming-guide/language-features/delegates/how-to-invoke-a-delegate-method.md)
