--- a/docs/visual-basic/misc/bc30544.md
+++ b/docs/visual-basic/misc/bc30544.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30544
 ms.assetid: 1e75d5fe-9a6b-43c2-9749-1f2d7ce5b10d
-ms.openlocfilehash: 548e17246b9e4e146ccaef7e0693992e8e270a99
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6838fc936574960716939f18ed7d3351e62b0e1e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61787335"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411265"
 ---
-# <a name="method-cannot-contain-both-a-try-statement-and-an-on-error-or-resume-statement"></a><span data-ttu-id="2b0ee-102">Il metodo non può contenere un'istruzione 'Try' insieme a un'istruzione 'On Error' o 'Resume'</span><span class="sxs-lookup"><span data-stu-id="2b0ee-102">Method cannot contain both a 'Try' statement and an 'On Error' or 'Resume' statement</span></span>
-<span data-ttu-id="2b0ee-103">È stata combinata un'istruzione `Try` con `On Error` o `Resume`.</span><span class="sxs-lookup"><span data-stu-id="2b0ee-103">You have combined a `Try` statement with `On Error` or `Resume`.</span></span>  
+# <a name="method-cannot-contain-both-a-try-statement-and-an-on-error-or-resume-statement"></a><span data-ttu-id="e0e8d-102">Il metodo non può contenere un'istruzione 'Try' insieme a un'istruzione 'On Error' o 'Resume'</span><span class="sxs-lookup"><span data-stu-id="e0e8d-102">Method cannot contain both a 'Try' statement and an 'On Error' or 'Resume' statement</span></span>
+<span data-ttu-id="e0e8d-103">È stata combinata un'istruzione `Try` con `On Error` o `Resume`.</span><span class="sxs-lookup"><span data-stu-id="e0e8d-103">You have combined a `Try` statement with `On Error` or `Resume`.</span></span>  
   
- <span data-ttu-id="2b0ee-104">**ID errore:** BC30544</span><span class="sxs-lookup"><span data-stu-id="2b0ee-104">**Error ID:** BC30544</span></span>  
+ <span data-ttu-id="e0e8d-104">**ID errore:** BC30544</span><span class="sxs-lookup"><span data-stu-id="e0e8d-104">**Error ID:** BC30544</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2b0ee-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2b0ee-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e0e8d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e0e8d-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="2b0ee-106">Rimuovere `On Error` o `Resume`.</span><span class="sxs-lookup"><span data-stu-id="2b0ee-106">Remove the `On Error` or `Resume`.</span></span>  
+1. <span data-ttu-id="e0e8d-106">Rimuovere `On Error` o `Resume`.</span><span class="sxs-lookup"><span data-stu-id="e0e8d-106">Remove the `On Error` or `Resume`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2b0ee-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2b0ee-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e0e8d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e0e8d-107">See also</span></span>
 
-- [<span data-ttu-id="2b0ee-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="2b0ee-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="e0e8d-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="e0e8d-108">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
