--- a/docs/visual-basic/misc/bc30627.md
+++ b/docs/visual-basic/misc/bc30627.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30627
 ms.assetid: 2ce0fcf2-80f4-47d3-a394-44e0aed456db
-ms.openlocfilehash: bce9723a72864bf0e19cbe4a33613e3bde718015
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fad1ebd9f4ea387df04b1e2b7f0516eb53a81979
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646693"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406093"
 ---
-# <a name="option-statements-must-precede-any-declarations-or-imports-statements"></a><span data-ttu-id="4b6ef-102">Le istruzioni 'Option' devono precedere tutte le dichiarazioni o le istruzioni 'Imports'</span><span class="sxs-lookup"><span data-stu-id="4b6ef-102">'Option' statements must precede any declarations or 'Imports' statements</span></span>
-<span data-ttu-id="4b6ef-103">Le istruzioni`Option` devono essere le prime istruzioni non di commento nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="4b6ef-103">`Option` statements should be the first non-comment statements in your source code.</span></span>  
+# <a name="option-statements-must-precede-any-declarations-or-imports-statements"></a><span data-ttu-id="cc7ec-102">Le istruzioni 'Option' devono precedere tutte le dichiarazioni o le istruzioni 'Imports'</span><span class="sxs-lookup"><span data-stu-id="cc7ec-102">'Option' statements must precede any declarations or 'Imports' statements</span></span>
+<span data-ttu-id="cc7ec-103">Le istruzioni`Option` devono essere le prime istruzioni non di commento nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="cc7ec-103">`Option` statements should be the first non-comment statements in your source code.</span></span>  
   
- <span data-ttu-id="4b6ef-104">**ID errore:** BC30627</span><span class="sxs-lookup"><span data-stu-id="4b6ef-104">**Error ID:** BC30627</span></span>  
+ <span data-ttu-id="cc7ec-104">**ID errore:** BC30627</span><span class="sxs-lookup"><span data-stu-id="cc7ec-104">**Error ID:** BC30627</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4b6ef-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4b6ef-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc7ec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cc7ec-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4b6ef-106">Spostare le istruzioni `Option` all'inizio del codice sorgente, immediatamente prima delle istruzioni `Imports` e `Namespace` .</span><span class="sxs-lookup"><span data-stu-id="4b6ef-106">Move the `Option` statements to the top of the source code, immediately before `Imports` and `Namespace` statements.</span></span>  
+- <span data-ttu-id="cc7ec-106">Spostare le istruzioni `Option` all'inizio del codice sorgente, immediatamente prima delle istruzioni `Imports` e `Namespace` .</span><span class="sxs-lookup"><span data-stu-id="cc7ec-106">Move the `Option` statements to the top of the source code, immediately before `Imports` and `Namespace` statements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4b6ef-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4b6ef-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cc7ec-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cc7ec-107">See also</span></span>
 
-- [<span data-ttu-id="4b6ef-108">Opzione \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="4b6ef-108">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)
-- [<span data-ttu-id="4b6ef-109">Istruzione Option Compare</span><span class="sxs-lookup"><span data-stu-id="4b6ef-109">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)
-- [<span data-ttu-id="4b6ef-110">Istruzione Option Explicit</span><span class="sxs-lookup"><span data-stu-id="4b6ef-110">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)
-- [<span data-ttu-id="4b6ef-111">Istruzione Option Infer</span><span class="sxs-lookup"><span data-stu-id="4b6ef-111">Option Infer Statement</span></span>](../../visual-basic/language-reference/statements/option-infer-statement.md)
-- [<span data-ttu-id="4b6ef-112">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="4b6ef-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="cc7ec-108">\<keyword>Istruzione Option</span><span class="sxs-lookup"><span data-stu-id="cc7ec-108">Option \<keyword> Statement</span></span>](../language-reference/statements/option-keyword-statement.md)
+- [<span data-ttu-id="cc7ec-109">Istruzione Option Compare</span><span class="sxs-lookup"><span data-stu-id="cc7ec-109">Option Compare Statement</span></span>](../language-reference/statements/option-compare-statement.md)
+- [<span data-ttu-id="cc7ec-110">Istruzione Option Explicit</span><span class="sxs-lookup"><span data-stu-id="cc7ec-110">Option Explicit Statement</span></span>](../language-reference/statements/option-explicit-statement.md)
+- [<span data-ttu-id="cc7ec-111">Option Infer (istruzione)</span><span class="sxs-lookup"><span data-stu-id="cc7ec-111">Option Infer Statement</span></span>](../language-reference/statements/option-infer-statement.md)
+- [<span data-ttu-id="cc7ec-112">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="cc7ec-112">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
