--- a/docs/visual-basic/misc/bc30716.md
+++ b/docs/visual-basic/misc/bc30716.md
@@ -4,23 +4,23 @@ ms.date: 07/20/2015
 helpviewer_keywords:
 - BC30716
 ms.assetid: 04ec9e29-b505-4b32-bce8-c952059368af
-ms.openlocfilehash: 048902da096f26e0d410684594a1c799b0005d79
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 132f7b7e9806072335d3a43a42a2d43bae374ffe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73196878"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406067"
 ---
-# <a name="finally-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="b3243-102">Le istruzioni 'Finally' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="b3243-102">'Finally' statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="b3243-103">Le istruzioni`Finally` possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="b3243-103">`Finally` statements can only be used in source code.</span></span>  
+# <a name="finally-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="5d768-102">Le istruzioni 'Finally' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="5d768-102">'Finally' statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="5d768-103">Le istruzioni`Finally` possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="5d768-103">`Finally` statements can only be used in source code.</span></span>  
   
- <span data-ttu-id="b3243-104">**ID errore:** BC30716</span><span class="sxs-lookup"><span data-stu-id="b3243-104">**Error ID:** BC30716</span></span>  
+ <span data-ttu-id="5d768-104">**ID errore:** BC30716</span><span class="sxs-lookup"><span data-stu-id="5d768-104">**Error ID:** BC30716</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b3243-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b3243-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5d768-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5d768-105">To correct this error</span></span>  
   
-- <span data-ttu-id="b3243-106">Rimuovere le istruzioni `Finally` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="b3243-106">Remove `Finally` statements from debugging code.</span></span>  
+- <span data-ttu-id="5d768-106">Rimuovere le istruzioni `Finally` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="5d768-106">Remove `Finally` statements from debugging code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b3243-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b3243-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5d768-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5d768-107">See also</span></span>
 
-- [<span data-ttu-id="b3243-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="b3243-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
-- [<span data-ttu-id="b3243-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="b3243-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
+- [<span data-ttu-id="5d768-108">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="5d768-108">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="5d768-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="5d768-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
