--- a/docs/visual-basic/misc/bc30718.md
+++ b/docs/visual-basic/misc/bc30718.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30718
 ms.assetid: 71990af6-8aaa-484a-a5a8-6ac399978537
-ms.openlocfilehash: cb784bb8d24930e84c68e0f3202713dd0c6e527a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f37e93426c2e123019d7f3ed70bab38f50c77c53
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657327"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406041"
 ---
-# <a name="select-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="a171f-102">Le istruzioni 'Select' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="a171f-102">'Select' statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="a171f-103">Le istruzioni`Select` possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="a171f-103">`Select` statements can only be used in source code.</span></span>  
+# <a name="select-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="3e70c-102">Le istruzioni 'Select' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="3e70c-102">'Select' statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="3e70c-103">Le istruzioni`Select` possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="3e70c-103">`Select` statements can only be used in source code.</span></span>  
   
- <span data-ttu-id="a171f-104">**ID errore:** BC30718</span><span class="sxs-lookup"><span data-stu-id="a171f-104">**Error ID:** BC30718</span></span>  
+ <span data-ttu-id="3e70c-104">**ID errore:** BC30718</span><span class="sxs-lookup"><span data-stu-id="3e70c-104">**Error ID:** BC30718</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a171f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a171f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3e70c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3e70c-105">To correct this error</span></span>  
   
-- <span data-ttu-id="a171f-106">Rimuovere le istruzioni `Select` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="a171f-106">Remove `Select` statements from debugging code.</span></span>  
+- <span data-ttu-id="3e70c-106">Rimuovere le istruzioni `Select` dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="3e70c-106">Remove `Select` statements from debugging code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a171f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a171f-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3e70c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3e70c-107">See also</span></span>
 
-- [<span data-ttu-id="a171f-108">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="a171f-108">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="3e70c-108">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="3e70c-108">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
