--- a/docs/visual-basic/misc/bc30728.md
+++ b/docs/visual-basic/misc/bc30728.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30728
 ms.assetid: 64c70bb5-3696-4865-8194-328394c2b4b1
-ms.openlocfilehash: 2521da75e9d659e7483b786d3ea2401ad1d75a02
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 85b7a8189c6c9699177abf3d40944d99e1161d4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657235"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406002"
 ---
-# <a name="methods-declared-in-structures-cannot-have-handles-clauses"></a><span data-ttu-id="385ac-102">I metodi dichiarati nelle strutture non possono contenere clausole 'Handles'</span><span class="sxs-lookup"><span data-stu-id="385ac-102">Methods declared in structures cannot have 'Handles' clauses</span></span>
-<span data-ttu-id="385ac-103">I metodi per la struttura non possono usare la parola chiave `Handles` per gestire gli eventi.</span><span class="sxs-lookup"><span data-stu-id="385ac-103">Structure methods cannot use the `Handles` keyword to handle events.</span></span>  
+# <a name="methods-declared-in-structures-cannot-have-handles-clauses"></a><span data-ttu-id="6e52b-102">I metodi dichiarati nelle strutture non possono contenere clausole 'Handles'</span><span class="sxs-lookup"><span data-stu-id="6e52b-102">Methods declared in structures cannot have 'Handles' clauses</span></span>
+<span data-ttu-id="6e52b-103">I metodi per la struttura non possono usare la parola chiave `Handles` per gestire gli eventi.</span><span class="sxs-lookup"><span data-stu-id="6e52b-103">Structure methods cannot use the `Handles` keyword to handle events.</span></span>  
   
- <span data-ttu-id="385ac-104">**ID errore:** BC30728</span><span class="sxs-lookup"><span data-stu-id="385ac-104">**Error ID:** BC30728</span></span>  
+ <span data-ttu-id="6e52b-104">**ID errore:** BC30728</span><span class="sxs-lookup"><span data-stu-id="6e52b-104">**Error ID:** BC30728</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="385ac-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="385ac-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6e52b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6e52b-105">To correct this error</span></span>  
   
-- <span data-ttu-id="385ac-106">È consigliabile riprogettare la struttura come una classe.</span><span class="sxs-lookup"><span data-stu-id="385ac-106">Consider redesigning your structure as a class.</span></span>  
+- <span data-ttu-id="6e52b-106">È consigliabile riprogettare la struttura come una classe.</span><span class="sxs-lookup"><span data-stu-id="6e52b-106">Consider redesigning your structure as a class.</span></span>  
   
-     <span data-ttu-id="385ac-107">È possibile usare `AddHandler` per associare un evento a un gestore eventi in una struttura, purché la struttura implementi un gestore eventi definito in un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="385ac-107">You can use `AddHandler` to associate an event with an event handler in a structure, provided that the structure implements an event handler defined in an interface.</span></span>  
+     <span data-ttu-id="6e52b-107">È possibile usare `AddHandler` per associare un evento a un gestore eventi in una struttura, purché la struttura implementi un gestore eventi definito in un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="6e52b-107">You can use `AddHandler` to associate an event with an event handler in a structure, provided that the structure implements an event handler defined in an interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="385ac-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="385ac-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6e52b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6e52b-108">See also</span></span>
 
-- [<span data-ttu-id="385ac-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="385ac-109">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+- [<span data-ttu-id="6e52b-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="6e52b-109">Structures and Classes</span></span>](../programming-guide/language-features/data-types/structures-and-classes.md)
 
-- [<span data-ttu-id="385ac-110">Eventi</span><span class="sxs-lookup"><span data-stu-id="385ac-110">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="6e52b-110">Events</span><span class="sxs-lookup"><span data-stu-id="6e52b-110">Events</span></span>](../programming-guide/language-features/events/index.md)
