--- a/docs/visual-basic/misc/bc31060.md
+++ b/docs/visual-basic/misc/bc31060.md
@@ -1,5 +1,5 @@
 ---
-title: «<propertyname>'definisce in modo implicito'<membername>', che è in conflitto con un membro con lo stesso nome nello <type> '<typename>»
+title: "' <propertyname> ' definisce in modo implicito ' <membername> ', che è in conflitto con un membro con lo stesso nome in <type> ' <typename> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31060
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31060
 ms.assetid: 33d3ca8b-711b-4f76-9b79-d5428b28dd2f
-ms.openlocfilehash: 017ec88404688c7bf195178fd2083238e72becd8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 230c88a95085ad00a3d4ee7ab567a71020909995
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601767"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405885"
 ---
-# <a name="propertyname-implicitly-defines-membername-which-conflicts-with-a-member-of-the-same-name-in-type-typename"></a><span data-ttu-id="705de-102">'\<NomeProprietà >' definisce in modo implicito '\<nomeMembro >', che è in conflitto con un membro con lo stesso nome nello \<tipo > '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="705de-102">'\<propertyname>' implicitly defines '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'</span></span>
-<span data-ttu-id="705de-103">Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per una proprietà.</span><span class="sxs-lookup"><span data-stu-id="705de-103">The name of a type member conflicts with the name of a member implicitly created for a property.</span></span> <span data-ttu-id="705de-104">Le proprietà creano in modo implicito diverse variabili implicite che possono essere in conflitto con i membri definiti.</span><span class="sxs-lookup"><span data-stu-id="705de-104">Properties implicitly create several implicit variables that can conflict with defined members.</span></span>  
+# <a name="propertyname-implicitly-defines-membername-which-conflicts-with-a-member-of-the-same-name-in-type-typename"></a><span data-ttu-id="6920c-102">' \<propertyname> ' definisce in modo implicito ' \<membername> ', che è in conflitto con un membro con lo stesso nome in \<type> ' \<typename> '</span><span class="sxs-lookup"><span data-stu-id="6920c-102">'\<propertyname>' implicitly defines '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'</span></span>
+<span data-ttu-id="6920c-103">Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per una proprietà.</span><span class="sxs-lookup"><span data-stu-id="6920c-103">The name of a type member conflicts with the name of a member implicitly created for a property.</span></span> <span data-ttu-id="6920c-104">Le proprietà creano in modo implicito diverse variabili implicite che possono essere in conflitto con i membri definiti.</span><span class="sxs-lookup"><span data-stu-id="6920c-104">Properties implicitly create several implicit variables that can conflict with defined members.</span></span>  
   
- <span data-ttu-id="705de-105">**ID errore:** BC31060</span><span class="sxs-lookup"><span data-stu-id="705de-105">**Error ID:** BC31060</span></span>  
+ <span data-ttu-id="6920c-105">**ID errore:** BC31060</span><span class="sxs-lookup"><span data-stu-id="6920c-105">**Error ID:** BC31060</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="705de-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="705de-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6920c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6920c-106">To correct this error</span></span>  
   
-- <span data-ttu-id="705de-107">Rinominare il membro dichiarato in modo esplicito per rimuovere il conflitto di denominazione.</span><span class="sxs-lookup"><span data-stu-id="705de-107">Rename the explicitly declared member to remove the naming conflict.</span></span>  
+- <span data-ttu-id="6920c-107">Rinominare il membro dichiarato in modo esplicito per rimuovere il conflitto di denominazione.</span><span class="sxs-lookup"><span data-stu-id="6920c-107">Rename the explicitly declared member to remove the naming conflict.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="705de-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="705de-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6920c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6920c-108">See also</span></span>
 
-- [<span data-ttu-id="705de-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="705de-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="6920c-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="6920c-109">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
