--- a/docs/visual-basic/misc/bc31061.md
+++ b/docs/visual-basic/misc/bc31061.md
@@ -1,5 +1,5 @@
 ---
-title: <type1>'<typename1>' è in conflitto con un membro dichiarato in modo implicito per <type2> l'<typename2>evento '<eventname>' in ''
+title: <type1>' <typename1> ' è in conflitto con un membro dichiarato in modo implicito per l'evento ' <eventname> ' in <type2> ' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31061
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31061
 ms.assetid: de5b1121-8c8f-4aba-a3e7-1e3e60df0dc5
-ms.openlocfilehash: a3f4611c3b9bac52c2e47fa4864f29fd1dc5c410
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5b9d407dd9ccadabf49d0da1e7f1bcd525a072b2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664652"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405872"
 ---
-# <a name="type1-typename1-conflicts-with-a-member-implicitly-declared-for-event-eventname-in-type2-typename2"></a><span data-ttu-id="6cf5e-102">\<tipo1 >'\<NomeTipo1 >' è in conflitto con un membro dichiarato in modo implicito per l'evento ' \<\<EventName >\<' in tipo2 >' NomeTipo2 >'</span><span class="sxs-lookup"><span data-stu-id="6cf5e-102">\<type1> '\<typename1>' conflicts with a member implicitly declared for event '\<eventname>' in \<type2> '\<typename2>'</span></span>
-<span data-ttu-id="6cf5e-103">Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per un evento.</span><span class="sxs-lookup"><span data-stu-id="6cf5e-103">The name of a type member conflicts with the name of a member implicitly created for an event.</span></span> <span data-ttu-id="6cf5e-104">Gli eventi creano in modo implicito diverse variabili implicite.</span><span class="sxs-lookup"><span data-stu-id="6cf5e-104">Events implicitly create several implicit variables.</span></span> <span data-ttu-id="6cf5e-105">Ad esempio, la dichiarazione `Event X` dichiara in modo implicito i nomi `XEventHandler`, `XEvent`, `add_X`e `remove_X`.</span><span class="sxs-lookup"><span data-stu-id="6cf5e-105">For example, the declaration `Event X` implicitly declares the names `XEventHandler`, `XEvent`, `add_X`, and `remove_X`.</span></span>  
+# <a name="type1-typename1-conflicts-with-a-member-implicitly-declared-for-event-eventname-in-type2-typename2"></a><span data-ttu-id="f1fd8-102">\<type1>' \<typename1> ' è in conflitto con un membro dichiarato in modo implicito per l'evento ' \<eventname> ' in \<type2> ' \<typename2> '</span><span class="sxs-lookup"><span data-stu-id="f1fd8-102">\<type1> '\<typename1>' conflicts with a member implicitly declared for event '\<eventname>' in \<type2> '\<typename2>'</span></span>
+<span data-ttu-id="f1fd8-103">Il nome di un membro di tipo è in conflitto con il nome di un membro creato in modo implicito per un evento.</span><span class="sxs-lookup"><span data-stu-id="f1fd8-103">The name of a type member conflicts with the name of a member implicitly created for an event.</span></span> <span data-ttu-id="f1fd8-104">Gli eventi creano in modo implicito diverse variabili implicite.</span><span class="sxs-lookup"><span data-stu-id="f1fd8-104">Events implicitly create several implicit variables.</span></span> <span data-ttu-id="f1fd8-105">Ad esempio, la dichiarazione `Event X` dichiara in modo implicito i nomi `XEventHandler`, `XEvent`, `add_X`e `remove_X`.</span><span class="sxs-lookup"><span data-stu-id="f1fd8-105">For example, the declaration `Event X` implicitly declares the names `XEventHandler`, `XEvent`, `add_X`, and `remove_X`.</span></span>  
   
- <span data-ttu-id="6cf5e-106">**ID errore:** BC31061</span><span class="sxs-lookup"><span data-stu-id="6cf5e-106">**Error ID:** BC31061</span></span>  
+ <span data-ttu-id="f1fd8-106">**ID errore:** BC31061</span><span class="sxs-lookup"><span data-stu-id="f1fd8-106">**Error ID:** BC31061</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6cf5e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6cf5e-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f1fd8-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f1fd8-107">To correct this error</span></span>  
   
-- <span data-ttu-id="6cf5e-108">Rinominare il membro dichiarato in modo esplicito per rimuovere il conflitto di denominazione.</span><span class="sxs-lookup"><span data-stu-id="6cf5e-108">Rename the explicitly declared member to remove the naming conflict.</span></span>  
+- <span data-ttu-id="f1fd8-108">Rinominare il membro dichiarato in modo esplicito per rimuovere il conflitto di denominazione.</span><span class="sxs-lookup"><span data-stu-id="f1fd8-108">Rename the explicitly declared member to remove the naming conflict.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6cf5e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6cf5e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f1fd8-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f1fd8-109">See also</span></span>
 
-- [<span data-ttu-id="6cf5e-110">Istruzioni di dichiarazione</span><span class="sxs-lookup"><span data-stu-id="6cf5e-110">Declaration Statements</span></span>](../programming-guide/language-features/statements.md#declaration-statements)
-- [<span data-ttu-id="6cf5e-111">Eventi</span><span class="sxs-lookup"><span data-stu-id="6cf5e-111">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="f1fd8-110">Istruzioni di dichiarazione</span><span class="sxs-lookup"><span data-stu-id="f1fd8-110">Declaration Statements</span></span>](../programming-guide/language-features/statements.md#declaration-statements)
+- [<span data-ttu-id="f1fd8-111">Events</span><span class="sxs-lookup"><span data-stu-id="f1fd8-111">Events</span></span>](../programming-guide/language-features/events/index.md)
