--- a/docs/visual-basic/misc/bc31067.md
+++ b/docs/visual-basic/misc/bc31067.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31067
 ms.assetid: 8f854f5f-99b1-40c9-8c21-e24712f37f71
-ms.openlocfilehash: 895e9ae5fb72ec4ac32990919888a31d56d5d87a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6ff9ed0b9630fc132bb38531824cad3c19772c71
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665653"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405820"
 ---
-# <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a><span data-ttu-id="1b4c8-102">Il metodo in una struttura non può essere dichiarato come 'Protected' o 'Protected Friend'</span><span class="sxs-lookup"><span data-stu-id="1b4c8-102">Method in a structure cannot be declared 'Protected' or 'Protected Friend'</span></span>
-<span data-ttu-id="1b4c8-103">Un metodo in una struttura è stato dichiarato come `Protected` o `Protected Friend`.</span><span class="sxs-lookup"><span data-stu-id="1b4c8-103">A method in a structure was declared as `Protected` or `Protected Friend`.</span></span>  
+# <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a><span data-ttu-id="41915-102">Il metodo in una struttura non può essere dichiarato come 'Protected' o 'Protected Friend'</span><span class="sxs-lookup"><span data-stu-id="41915-102">Method in a structure cannot be declared 'Protected' or 'Protected Friend'</span></span>
+<span data-ttu-id="41915-103">Un metodo in una struttura è stato dichiarato come `Protected` o `Protected Friend`.</span><span class="sxs-lookup"><span data-stu-id="41915-103">A method in a structure was declared as `Protected` or `Protected Friend`.</span></span>  
   
- <span data-ttu-id="1b4c8-104">**ID errore:** BC31067</span><span class="sxs-lookup"><span data-stu-id="1b4c8-104">**Error ID:** BC31067</span></span>  
+ <span data-ttu-id="41915-104">**ID errore:** BC31067</span><span class="sxs-lookup"><span data-stu-id="41915-104">**Error ID:** BC31067</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b4c8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1b4c8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="41915-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41915-105">To correct this error</span></span>  
   
-- <span data-ttu-id="1b4c8-106">Dichiarare i metodi nelle strutture come `Public` o `Private`.</span><span class="sxs-lookup"><span data-stu-id="1b4c8-106">Declare methods inside structures as `Public` or `Private`.</span></span>  
+- <span data-ttu-id="41915-106">Dichiarare i metodi nelle strutture come `Public` o `Private`.</span><span class="sxs-lookup"><span data-stu-id="41915-106">Declare methods inside structures as `Public` or `Private`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1b4c8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1b4c8-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="41915-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41915-107">See also</span></span>
 
-- [<span data-ttu-id="1b4c8-108">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="1b4c8-108">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="1b4c8-109">Protected</span><span class="sxs-lookup"><span data-stu-id="1b4c8-109">Protected</span></span>](../../visual-basic/language-reference/modifiers/protected.md)
-- [<span data-ttu-id="1b4c8-110">Friend</span><span class="sxs-lookup"><span data-stu-id="1b4c8-110">Friend</span></span>](../../visual-basic/language-reference/modifiers/friend.md)
+- [<span data-ttu-id="41915-108">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="41915-108">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="41915-109">Protetto</span><span class="sxs-lookup"><span data-stu-id="41915-109">Protected</span></span>](../language-reference/modifiers/protected.md)
+- [<span data-ttu-id="41915-110">Amico</span><span class="sxs-lookup"><span data-stu-id="41915-110">Friend</span></span>](../language-reference/modifiers/friend.md)
