--- a/docs/visual-basic/misc/bc31068.md
+++ b/docs/visual-basic/misc/bc31068.md
@@ -1,5 +1,5 @@
 ---
-title: Il delegato in un'interfaccia non può essere dichiarato '<specifier>'
+title: Il delegato in un'interfaccia non può essere dichiarato come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31068
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31068
 ms.assetid: 5d62515b-0678-449a-983b-697e15aac621
-ms.openlocfilehash: a122cebb1232b898c4c91ae9b8396b1cf00b2fa8
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 2521ce0cad5cf537fbbad2c57729a994972d536f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958587"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405807"
 ---
-# <a name="delegate-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="e35f9-102">Il delegato in un'interfaccia non può essere dichiarato '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="e35f9-102">Delegate in an interface cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="e35f9-103">Il modificatore specificato con un delegato dichiarato nell'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="e35f9-103">An invalid modifier was specified with a delegate declared in an interface.</span></span>  
+# <a name="delegate-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="3ef30-102">Il delegato in un'interfaccia non può essere dichiarato come ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="3ef30-102">Delegate in an interface cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="3ef30-103">Il modificatore specificato con un delegato dichiarato nell'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="3ef30-103">An invalid modifier was specified with a delegate declared in an interface.</span></span>  
   
- <span data-ttu-id="e35f9-104">**ID errore:** BC31068</span><span class="sxs-lookup"><span data-stu-id="e35f9-104">**Error ID:** BC31068</span></span>  
+ <span data-ttu-id="3ef30-104">**ID errore:** BC31068</span><span class="sxs-lookup"><span data-stu-id="3ef30-104">**Error ID:** BC31068</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e35f9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e35f9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3ef30-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3ef30-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="e35f9-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`e `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="e35f9-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, and `Overridable`.</span></span>  
+1. <span data-ttu-id="3ef30-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`e `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="3ef30-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, and `Overridable`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e35f9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e35f9-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3ef30-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3ef30-107">See also</span></span>
 
-- [<span data-ttu-id="e35f9-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="e35f9-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="3ef30-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="3ef30-108">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
