--- a/docs/visual-basic/misc/bc31069.md
+++ b/docs/visual-basic/misc/bc31069.md
@@ -1,5 +1,5 @@
 ---
-title: Enumeratore in un'interfaccia non può essere dichiarato '<specifier>'
+title: L'enumerazione in un'interfaccia non può essere dichiarata come ' <specifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31069
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31069
 ms.assetid: 26025ba0-c710-4fd4-8f36-f931db142d96
-ms.openlocfilehash: 5125bb76c3ac8f414b5999e95034d552a2f51626
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d0adf9158718af86e987e90abd7e90e7fc0ab5c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912991"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405794"
 ---
-# <a name="enum-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="02eed-102">Enumeratore in un'interfaccia non può essere dichiarato '\<identificatore >'</span><span class="sxs-lookup"><span data-stu-id="02eed-102">Enum in an interface cannot be declared '\<specifier>'</span></span>
-<span data-ttu-id="02eed-103">Il modificatore specificato con un'enumerazione dichiarata in un'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="02eed-103">An invalid modifier was specified with an enumeration declared in an interface.</span></span>  
+# <a name="enum-in-an-interface-cannot-be-declared-specifier"></a><span data-ttu-id="fb375-102">L'enumerazione in un'interfaccia non può essere dichiarata come ' \<specifier> '</span><span class="sxs-lookup"><span data-stu-id="fb375-102">Enum in an interface cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="fb375-103">Il modificatore specificato con un'enumerazione dichiarata in un'interfaccia non è valido.</span><span class="sxs-lookup"><span data-stu-id="fb375-103">An invalid modifier was specified with an enumeration declared in an interface.</span></span>  
   
- <span data-ttu-id="02eed-104">**ID errore:** BC31069</span><span class="sxs-lookup"><span data-stu-id="02eed-104">**Error ID:** BC31069</span></span>  
+ <span data-ttu-id="fb375-104">**ID errore:** BC31069</span><span class="sxs-lookup"><span data-stu-id="fb375-104">**Error ID:** BC31069</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="02eed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="02eed-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fb375-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fb375-105">To correct this error</span></span>  
   
-- <span data-ttu-id="02eed-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`o `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="02eed-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, or `Overridable`.</span></span>  
+- <span data-ttu-id="fb375-106">Rimuovere i modificatori come `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`o `Overridable`.</span><span class="sxs-lookup"><span data-stu-id="fb375-106">Remove modifiers such as `Public`, `Private`, `Shared`, `Friend`, `Protected`, `Protected Friend`, or `Overridable`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="02eed-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="02eed-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fb375-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fb375-107">See also</span></span>
 
-- [<span data-ttu-id="02eed-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="02eed-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [<span data-ttu-id="02eed-109">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="02eed-109">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+- [<span data-ttu-id="fb375-108">Interfacce</span><span class="sxs-lookup"><span data-stu-id="fb375-108">Interfaces</span></span>](../programming-guide/language-features/interfaces/index.md)
+- [<span data-ttu-id="fb375-109">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="fb375-109">Enum Statement</span></span>](../language-reference/statements/enum-statement.md)
