--- a/docs/visual-basic/misc/bc31073.md
+++ b/docs/visual-basic/misc/bc31073.md
@@ -1,5 +1,5 @@
 ---
-title: «<name1>' è in conflitto con un <type> con lo stesso nome definito in '<name2>»
+title: "' <name1> ' è in conflitto con un oggetto <type> con lo stesso nome definito in ' <name2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31073
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31073
 ms.assetid: cb44155b-2d6f-4c1d-a8c9-7cc098846fd2
-ms.openlocfilehash: c401ad79fa3e3dcbabb867938afffa8a58c5a2db
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5d42d8fa7f95699f16781942910eb8bf1b754643
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958444"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405742"
 ---
-# <a name="name1-conflicts-with-a-type-by-the-same-name-defined-in-name2"></a><span data-ttu-id="f31a3-102">'\<name1 >' è in conflitto con un \<tipo > con lo stesso nome definito in '\<nome2 >'</span><span class="sxs-lookup"><span data-stu-id="f31a3-102">'\<name1>' conflicts with a \<type> by the same name defined in '\<name2>'</span></span>
-<span data-ttu-id="f31a3-103">È stato rilevato un nome in conflitto con un tipo con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="f31a3-103">A name was encountered that conflicts with a type with the same name.</span></span>  
+# <a name="name1-conflicts-with-a-type-by-the-same-name-defined-in-name2"></a><span data-ttu-id="1325c-102">' \<name1> ' è in conflitto con un oggetto \<type> con lo stesso nome definito in ' \<name2> '</span><span class="sxs-lookup"><span data-stu-id="1325c-102">'\<name1>' conflicts with a \<type> by the same name defined in '\<name2>'</span></span>
+<span data-ttu-id="1325c-103">È stato rilevato un nome in conflitto con un tipo con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="1325c-103">A name was encountered that conflicts with a type with the same name.</span></span>  
   
- <span data-ttu-id="f31a3-104">**ID errore:** BC31073</span><span class="sxs-lookup"><span data-stu-id="f31a3-104">**Error ID:** BC31073</span></span>  
+ <span data-ttu-id="1325c-104">**ID errore:** BC31073</span><span class="sxs-lookup"><span data-stu-id="1325c-104">**Error ID:** BC31073</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f31a3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f31a3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1325c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1325c-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="f31a3-106">Dichiarare un nome univoco.</span><span class="sxs-lookup"><span data-stu-id="f31a3-106">Declare a unique name.</span></span>  
+1. <span data-ttu-id="1325c-106">Dichiarare un nome univoco.</span><span class="sxs-lookup"><span data-stu-id="1325c-106">Declare a unique name.</span></span>  
   
-2. <span data-ttu-id="f31a3-107">Racchiudere il nome del membro in conflitto tra parentesi quadre.</span><span class="sxs-lookup"><span data-stu-id="f31a3-107">Use square brackets around the conflicting member name.</span></span>  
+2. <span data-ttu-id="1325c-107">Racchiudere il nome del membro in conflitto tra parentesi quadre.</span><span class="sxs-lookup"><span data-stu-id="1325c-107">Use square brackets around the conflicting member name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f31a3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f31a3-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1325c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1325c-108">See also</span></span>
 
-- [<span data-ttu-id="f31a3-109">Struttura del programma e convenzioni di scrittura del codice</span><span class="sxs-lookup"><span data-stu-id="f31a3-109">Program Structure and Code Conventions</span></span>](../../visual-basic/programming-guide/program-structure/program-structure-and-code-conventions.md)
+- [<span data-ttu-id="1325c-109">Struttura del programma e convenzioni del codice</span><span class="sxs-lookup"><span data-stu-id="1325c-109">Program Structure and Code Conventions</span></span>](../programming-guide/program-structure/program-structure-and-code-conventions.md)
