--- a/docs/visual-basic/misc/bc31116.md
+++ b/docs/visual-basic/misc/bc31116.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31116
 ms.assetid: 49031274-e048-41d8-aec8-6ea005964225
-ms.openlocfilehash: 1a0ed333ce6323fb67e4f504557655649cc7f68f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6bb6fe5a86407b49e8a858ffabe3869a733a2ee5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585315"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405651"
 ---
-# <a name="removehandler-declaration-must-end-with-a-matching-end-removehandler"></a><span data-ttu-id="e9396-102">La dichiarazione 'RemoveHandler' deve terminare con un oggetto 'End RemoveHandler' corrispondente</span><span class="sxs-lookup"><span data-stu-id="e9396-102">'RemoveHandler' declaration must end with a matching 'End RemoveHandler'</span></span>
-<span data-ttu-id="e9396-103">Una dichiarazione `RemoveHandler` deve terminare con un'istruzione `End RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="e9396-103">A `RemoveHandler` declaration must end with an `End RemoveHandler` statement.</span></span>  
+# <a name="removehandler-declaration-must-end-with-a-matching-end-removehandler"></a><span data-ttu-id="e0754-102">La dichiarazione 'RemoveHandler' deve terminare con un oggetto 'End RemoveHandler' corrispondente</span><span class="sxs-lookup"><span data-stu-id="e0754-102">'RemoveHandler' declaration must end with a matching 'End RemoveHandler'</span></span>
+<span data-ttu-id="e0754-103">Una dichiarazione `RemoveHandler` deve terminare con un'istruzione `End RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="e0754-103">A `RemoveHandler` declaration must end with an `End RemoveHandler` statement.</span></span>  
   
- <span data-ttu-id="e9396-104">**ID errore:** BC31116</span><span class="sxs-lookup"><span data-stu-id="e9396-104">**Error ID:** BC31116</span></span>  
+ <span data-ttu-id="e0754-104">**ID errore:** BC31116</span><span class="sxs-lookup"><span data-stu-id="e0754-104">**Error ID:** BC31116</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e9396-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e9396-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e0754-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e0754-105">To correct this error</span></span>  
   
-- <span data-ttu-id="e9396-106">Controllare che la dichiarazione `RemoveHandler` termini con un'istruzione `End RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="e9396-106">Check that the `RemoveHandler` declaration ends with an `End RemoveHandler` statement.</span></span>  
+- <span data-ttu-id="e0754-106">Controllare che la dichiarazione `RemoveHandler` termini con un'istruzione `End RemoveHandler` .</span><span class="sxs-lookup"><span data-stu-id="e0754-106">Check that the `RemoveHandler` declaration ends with an `End RemoveHandler` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e9396-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e9396-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e0754-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e0754-107">See also</span></span>
 
-- [<span data-ttu-id="e9396-108">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="e9396-108">RemoveHandler Statement</span></span>](../../visual-basic/language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="e9396-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="e9396-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="e0754-108">Istruzione RemoveHandler</span><span class="sxs-lookup"><span data-stu-id="e0754-108">RemoveHandler Statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="e0754-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="e0754-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
