--- a/docs/visual-basic/misc/bc31117.md
+++ b/docs/visual-basic/misc/bc31117.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31117
 ms.assetid: 1f922880-de2e-4ebd-9968-bf1ebac2aab7
-ms.openlocfilehash: 26bea4fb4ad895c6cfb4401fbbf591ffff0f198d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5dd4a5a897473958fb4c6fb49b0422c7a1a96aee
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585557"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405637"
 ---
-# <a name="raiseevent-declaration-must-end-with-a-matching-end-raiseevent"></a><span data-ttu-id="c7672-102">La dichiarazione 'RaiseEvent' deve terminare con un oggetto 'End RaiseEvent' corrispondente</span><span class="sxs-lookup"><span data-stu-id="c7672-102">'RaiseEvent' declaration must end with a matching 'End RaiseEvent'</span></span>
-<span data-ttu-id="c7672-103">Una dichiarazione `RaiseEvent` deve terminare con un'istruzione `End RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="c7672-103">A `RaiseEvent` declaration must end with an `End RaiseEvent` statement.</span></span>  
+# <a name="raiseevent-declaration-must-end-with-a-matching-end-raiseevent"></a><span data-ttu-id="ad3d3-102">La dichiarazione 'RaiseEvent' deve terminare con un oggetto 'End RaiseEvent' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ad3d3-102">'RaiseEvent' declaration must end with a matching 'End RaiseEvent'</span></span>
+<span data-ttu-id="ad3d3-103">Una dichiarazione `RaiseEvent` deve terminare con un'istruzione `End RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="ad3d3-103">A `RaiseEvent` declaration must end with an `End RaiseEvent` statement.</span></span>  
   
- <span data-ttu-id="c7672-104">**ID errore:** BC31117</span><span class="sxs-lookup"><span data-stu-id="c7672-104">**Error ID:** BC31117</span></span>  
+ <span data-ttu-id="ad3d3-104">**ID errore:** BC31117</span><span class="sxs-lookup"><span data-stu-id="ad3d3-104">**Error ID:** BC31117</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c7672-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c7672-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ad3d3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ad3d3-105">To correct this error</span></span>  
   
-- <span data-ttu-id="c7672-106">Controllare che la dichiarazione `RaiseEvent` termini con un'istruzione `End RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="c7672-106">Check that the `RaiseEvent` declaration ends with an `End RaiseEvent` statement.</span></span>  
+- <span data-ttu-id="ad3d3-106">Controllare che la dichiarazione `RaiseEvent` termini con un'istruzione `End RaiseEvent` .</span><span class="sxs-lookup"><span data-stu-id="ad3d3-106">Check that the `RaiseEvent` declaration ends with an `End RaiseEvent` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c7672-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c7672-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ad3d3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ad3d3-107">See also</span></span>
 
-- [<span data-ttu-id="c7672-108">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="c7672-108">RaiseEvent Statement</span></span>](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="c7672-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="c7672-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="ad3d3-108">Istruzione RaiseEvent</span><span class="sxs-lookup"><span data-stu-id="ad3d3-108">RaiseEvent Statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="ad3d3-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="ad3d3-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
