--- a/docs/visual-basic/misc/bc31181.md
+++ b/docs/visual-basic/misc/bc31181.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31181
 ms.assetid: 37137965-bba1-45ee-b4e9-1bf2d5388802
-ms.openlocfilehash: c8827038dd1e8c830e81f2a26440e38ffdb0c3b6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ecd4b8c5ce5185752de69c0ea25fc013f06a18d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665529"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405430"
 ---
-# <a name="attribute-value-is-not-valid-expecting-value"></a><span data-ttu-id="d70b3-102">Valore di attributo non valido. Previsto 'value'</span><span class="sxs-lookup"><span data-stu-id="d70b3-102">Attribute value is not valid; expecting 'value'</span></span>
-<span data-ttu-id="d70b3-103">È stato specificato un valore non valido per un attributo in un valore letterale documento XML.</span><span class="sxs-lookup"><span data-stu-id="d70b3-103">An invalid value for an attribute in an XML document literal has been specified.</span></span> <span data-ttu-id="d70b3-104">I valori degli attributi validi per un valore letterale documento XML sono indicati nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="d70b3-104">Valid attribute values for an XML document literal are specified in the XML 1.0 specification.</span></span>  
+# <a name="attribute-value-is-not-valid-expecting-value"></a><span data-ttu-id="7f844-102">Valore di attributo non valido. Previsto 'value'</span><span class="sxs-lookup"><span data-stu-id="7f844-102">Attribute value is not valid; expecting 'value'</span></span>
+<span data-ttu-id="7f844-103">È stato specificato un valore non valido per un attributo in un valore letterale documento XML.</span><span class="sxs-lookup"><span data-stu-id="7f844-103">An invalid value for an attribute in an XML document literal has been specified.</span></span> <span data-ttu-id="7f844-104">I valori degli attributi validi per un valore letterale documento XML sono indicati nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="7f844-104">Valid attribute values for an XML document literal are specified in the XML 1.0 specification.</span></span>  
   
- <span data-ttu-id="d70b3-105">**ID errore:** BC31181</span><span class="sxs-lookup"><span data-stu-id="d70b3-105">**Error ID:** BC31181</span></span>  
+ <span data-ttu-id="7f844-105">**ID errore:** BC31181</span><span class="sxs-lookup"><span data-stu-id="7f844-105">**Error ID:** BC31181</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d70b3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d70b3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7f844-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7f844-106">To correct this error</span></span>  
   
-- <span data-ttu-id="d70b3-107">Aggiornare il valore dell'attributo su un valore valido, come indicato nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="d70b3-107">Update the attribute value to a valid value, as specified in the XML 1.0 specification.</span></span>  
+- <span data-ttu-id="7f844-107">Aggiornare il valore dell'attributo su un valore valido, come indicato nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="7f844-107">Update the attribute value to a valid value, as specified in the XML 1.0 specification.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d70b3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d70b3-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7f844-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7f844-108">See also</span></span>
 
-- [<span data-ttu-id="d70b3-109">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="d70b3-109">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [<span data-ttu-id="d70b3-110">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="d70b3-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="d70b3-111">XML</span><span class="sxs-lookup"><span data-stu-id="d70b3-111">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="7f844-109">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="7f844-109">XML Literals and the XML 1.0 Specification</span></span>](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [<span data-ttu-id="7f844-110">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="7f844-110">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="7f844-111">XML</span><span class="sxs-lookup"><span data-stu-id="7f844-111">XML</span></span>](../programming-guide/language-features/xml/index.md)
