--- a/docs/visual-basic/misc/bc32042.md
+++ b/docs/visual-basic/misc/bc32042.md
@@ -1,5 +1,5 @@
 ---
-title: Numero insufficiente di argomenti tipo per '<genericMethodName>'
+title: Argomenti di tipo insufficienti in ' <genericMethodName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32042
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32042
 ms.assetid: e887b068-4e84-4cb4-9649-94fe162a821e
-ms.openlocfilehash: 0da35fd26cb0eba170433c3e8ff1aa4097f9ad4a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be395040f7ade4734a1c7f4090b7d46693d77b21
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618837"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407327"
 ---
-# <a name="too-few-type-arguments-to-genericmethodname"></a><span data-ttu-id="eddc5-102">Numero insufficiente di argomenti tipo per '\<genericMethodName >'</span><span class="sxs-lookup"><span data-stu-id="eddc5-102">Too few type arguments to '\<genericMethodName>'</span></span>
-<span data-ttu-id="eddc5-103">È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="eddc5-103">A generic method has been invoked with fewer type arguments than there are type parameters.</span></span>  
+# <a name="too-few-type-arguments-to-genericmethodname"></a><span data-ttu-id="761fd-102">Argomenti di tipo insufficienti in ' \<genericMethodName> '</span><span class="sxs-lookup"><span data-stu-id="761fd-102">Too few type arguments to '\<genericMethodName>'</span></span>
+<span data-ttu-id="761fd-103">È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="761fd-103">A generic method has been invoked with fewer type arguments than there are type parameters.</span></span>  
   
- <span data-ttu-id="eddc5-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="eddc5-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
+ <span data-ttu-id="761fd-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="761fd-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
   
- <span data-ttu-id="eddc5-105">**ID errore:** BC32042</span><span class="sxs-lookup"><span data-stu-id="eddc5-105">**Error ID:** BC32042</span></span>  
+ <span data-ttu-id="761fd-105">**ID errore:** BC32042</span><span class="sxs-lookup"><span data-stu-id="761fd-105">**Error ID:** BC32042</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eddc5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="eddc5-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="761fd-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="761fd-106">To correct this error</span></span>  
   
-- <span data-ttu-id="eddc5-107">Aggiungere argomenti di tipo all'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo nel metodo generico richiamato.</span><span class="sxs-lookup"><span data-stu-id="eddc5-107">Add type arguments to your type argument list so that there is one for each type parameter on the generic method you are invoking.</span></span>  
+- <span data-ttu-id="761fd-107">Aggiungere argomenti di tipo all'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo nel metodo generico richiamato.</span><span class="sxs-lookup"><span data-stu-id="761fd-107">Add type arguments to your type argument list so that there is one for each type parameter on the generic method you are invoking.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eddc5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="eddc5-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="761fd-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="761fd-108">See also</span></span>
 
-- [<span data-ttu-id="eddc5-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="eddc5-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="eddc5-110">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="eddc5-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="eddc5-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="eddc5-111">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="761fd-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="761fd-109">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="761fd-110">Type List</span><span class="sxs-lookup"><span data-stu-id="761fd-110">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="761fd-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="761fd-111">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
