--- a/docs/visual-basic/misc/bc32044.md
+++ b/docs/visual-basic/misc/bc32044.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'non ereditare o implementare il tipo di vincolo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' non eredita da o implementa il tipo di vincolo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32044
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC32044
 ms.assetid: be91f648-c07d-4991-8ed1-28b1327619c4
-ms.openlocfilehash: 4136f1641bd0195af0e1de618be266e1d73cf123
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 8515e084c5acf357f20a9b9ead0673f50ef6b78b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912835"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407307"
 ---
-# <a name="type-argument-typeargumentname-does-not-inherit-from-or-implement-the-constraint-type-typeparametername"></a><span data-ttu-id="7a44e-102">Argomento di tipo '\<nomeargomentotipo >' non ereditare o implementare il tipo di vincolo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="7a44e-102">Type argument '\<typeargumentname>' does not inherit from or implement the constraint type '\<typeparametername>'</span></span>
-<span data-ttu-id="7a44e-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di ereditarietà o implementazione sul suo parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="7a44e-103">A type argument supplied to a generic type does not satisfy the inheritance or implementation constraint on its corresponding type parameter.</span></span>  
+# <a name="type-argument-typeargumentname-does-not-inherit-from-or-implement-the-constraint-type-typeparametername"></a><span data-ttu-id="9e0ae-102">L'argomento di tipo ' \<typeargumentname> ' non eredita da o implementa il tipo di vincolo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="9e0ae-102">Type argument '\<typeargumentname>' does not inherit from or implement the constraint type '\<typeparametername>'</span></span>
+<span data-ttu-id="9e0ae-103">Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di ereditarietà o implementazione sul suo parametro di tipo corrispondente.</span><span class="sxs-lookup"><span data-stu-id="9e0ae-103">A type argument supplied to a generic type does not satisfy the inheritance or implementation constraint on its corresponding type parameter.</span></span>  
   
- <span data-ttu-id="7a44e-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="7a44e-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="7a44e-105">Ecco alcuni possibili requisiti:</span><span class="sxs-lookup"><span data-stu-id="7a44e-105">The possible requirements include the following:</span></span>  
+ <span data-ttu-id="9e0ae-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="9e0ae-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="9e0ae-105">Ecco alcuni possibili requisiti:</span><span class="sxs-lookup"><span data-stu-id="9e0ae-105">The possible requirements include the following:</span></span>  
   
-- <span data-ttu-id="7a44e-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="7a44e-106">The type argument must implement one or more interfaces</span></span>  
+- <span data-ttu-id="9e0ae-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="9e0ae-106">The type argument must implement one or more interfaces</span></span>  
   
-- <span data-ttu-id="7a44e-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="7a44e-107">The type argument must inherit from at most one class</span></span>  
+- <span data-ttu-id="9e0ae-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="9e0ae-107">The type argument must inherit from at most one class</span></span>  
   
- <span data-ttu-id="7a44e-108">È possibile combinare i requisiti precedenti per un parametro di tipo singolo.</span><span class="sxs-lookup"><span data-stu-id="7a44e-108">You can combine the preceding requirements for a single type parameter.</span></span> <span data-ttu-id="7a44e-109">Visual Basic non è possibile creare il tipo, a meno che il codice fornisca gli argomenti di tipo che soddisfano ogni vincolo su ogni parametro di tipo definito nel tipo generico.</span><span class="sxs-lookup"><span data-stu-id="7a44e-109">Visual Basic cannot construct the type unless the code supplies type arguments that satisfy every constraint on every type parameter defined on the generic type.</span></span>  
+ <span data-ttu-id="9e0ae-108">È possibile combinare i requisiti precedenti per un parametro di tipo singolo.</span><span class="sxs-lookup"><span data-stu-id="9e0ae-108">You can combine the preceding requirements for a single type parameter.</span></span> <span data-ttu-id="9e0ae-109">Visual Basic non può costruire il tipo a meno che il codice non fornisca gli argomenti di tipo che soddisfano ogni vincolo su ogni parametro di tipo definito nel tipo generico.</span><span class="sxs-lookup"><span data-stu-id="9e0ae-109">Visual Basic cannot construct the type unless the code supplies type arguments that satisfy every constraint on every type parameter defined on the generic type.</span></span>  
   
- <span data-ttu-id="7a44e-110">**ID errore:** BC32044</span><span class="sxs-lookup"><span data-stu-id="7a44e-110">**Error ID:** BC32044</span></span>  
+ <span data-ttu-id="9e0ae-110">**ID errore:** BC32044</span><span class="sxs-lookup"><span data-stu-id="9e0ae-110">**Error ID:** BC32044</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7a44e-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7a44e-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9e0ae-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9e0ae-111">To correct this error</span></span>  
   
-- <span data-ttu-id="7a44e-112">Selezionare un argomento di tipo di un tipo che implementa ogni interfaccia specificata per il parametro di tipo e che eredita dalla classe specificata, se esiste.</span><span class="sxs-lookup"><span data-stu-id="7a44e-112">Select a type argument of a type that implements every interface specified for the type parameter, and that inherits from the specified class if there is one.</span></span>  
+- <span data-ttu-id="9e0ae-112">Selezionare un argomento di tipo di un tipo che implementa ogni interfaccia specificata per il parametro di tipo e che eredita dalla classe specificata, se esiste.</span><span class="sxs-lookup"><span data-stu-id="9e0ae-112">Select a type argument of a type that implements every interface specified for the type parameter, and that inherits from the specified class if there is one.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7a44e-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7a44e-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9e0ae-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9e0ae-113">See also</span></span>
 
-- [<span data-ttu-id="7a44e-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7a44e-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="7a44e-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="7a44e-115">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="9e0ae-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9e0ae-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="9e0ae-115">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="9e0ae-115">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
