--- a/docs/visual-basic/misc/bc32047.md
+++ b/docs/visual-basic/misc/bc32047.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' può avere soltanto un vincolo costituito da una classe
+title: Il parametro di tipo '<typeparametername>' può avere soltanto un vincolo costituito da una classe
 ms.date: 07/20/2015
 f1_keywords:
 - bc32047
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32047
 ms.assetid: ac7ab76b-5300-4c79-b519-5a1287ed5fa9
-ms.openlocfilehash: f28035d8d35258a50ccdbe6bc18c93a0480e76fd
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 327050e1da7d294ea9978601e4fbc73e50751556
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912965"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407262"
 ---
-# <a name="type-parameter-typeparametername-can-only-have-one-constraint-that-is-a-class"></a><span data-ttu-id="e7a7e-102">Parametro di tipo '\<nomeparametrotipo >' può avere soltanto un vincolo costituito da una classe</span><span class="sxs-lookup"><span data-stu-id="e7a7e-102">Type parameter '\<typeparametername>' can only have one constraint that is a class</span></span>
-<span data-ttu-id="e7a7e-103">Un elenco di vincoli include più di una classe.</span><span class="sxs-lookup"><span data-stu-id="e7a7e-103">A constraint list includes more than one class.</span></span>  
+# <a name="type-parameter-typeparametername-can-only-have-one-constraint-that-is-a-class"></a><span data-ttu-id="1d890-102">Il parametro di tipo '\<typeparametername>' può avere soltanto un vincolo costituito da una classe</span><span class="sxs-lookup"><span data-stu-id="1d890-102">Type parameter '\<typeparametername>' can only have one constraint that is a class</span></span>
+<span data-ttu-id="1d890-103">Un elenco di vincoli include più di una classe.</span><span class="sxs-lookup"><span data-stu-id="1d890-103">A constraint list includes more than one class.</span></span>  
   
- <span data-ttu-id="e7a7e-104">Un elenco di vincoli in un parametro di tipo può accettare un numero qualsiasi di interfacce, ma al massimo una classe.</span><span class="sxs-lookup"><span data-stu-id="e7a7e-104">A constraint list on a type parameter can accept any number of interfaces but at most one class.</span></span> <span data-ttu-id="e7a7e-105">Un argomento di tipo fornito per il parametro di tipo deve ereditare da quella classe che Visual Basic non supporta più ereditarietà.</span><span class="sxs-lookup"><span data-stu-id="e7a7e-105">A type argument supplied for that type parameter must inherit from that class, and Visual Basic does not support multiple inheritance.</span></span>  
+ <span data-ttu-id="1d890-104">Un elenco di vincoli in un parametro di tipo può accettare un numero qualsiasi di interfacce, ma al massimo una classe.</span><span class="sxs-lookup"><span data-stu-id="1d890-104">A constraint list on a type parameter can accept any number of interfaces but at most one class.</span></span> <span data-ttu-id="1d890-105">Un argomento di tipo fornito per tale parametro di tipo deve ereditare da tale classe e Visual Basic non supporta l'ereditarietà multipla.</span><span class="sxs-lookup"><span data-stu-id="1d890-105">A type argument supplied for that type parameter must inherit from that class, and Visual Basic does not support multiple inheritance.</span></span>  
   
- <span data-ttu-id="e7a7e-106">**ID errore:** BC32047</span><span class="sxs-lookup"><span data-stu-id="e7a7e-106">**Error ID:** BC32047</span></span>  
+ <span data-ttu-id="1d890-106">**ID errore:** BC32047</span><span class="sxs-lookup"><span data-stu-id="1d890-106">**Error ID:** BC32047</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e7a7e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e7a7e-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1d890-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1d890-107">To correct this error</span></span>  
   
-- <span data-ttu-id="e7a7e-108">Selezionare una classe e includere solo quella classe nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="e7a7e-108">Select one class and include only that class in the constraint list.</span></span>  
+- <span data-ttu-id="1d890-108">Selezionare una classe e includere solo quella classe nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="1d890-108">Select one class and include only that class in the constraint list.</span></span>  
   
-- <span data-ttu-id="e7a7e-109">Può essere possibile definire parametri di tipo aggiuntivi per inserire la classe o le classi che non è stato possibile aggiungere all'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="e7a7e-109">You might be able to define additional type parameters to accommodate the class or classes that you could not include in this constraint list.</span></span>  
+- <span data-ttu-id="1d890-109">Può essere possibile definire parametri di tipo aggiuntivi per inserire la classe o le classi che non è stato possibile aggiungere all'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="1d890-109">You might be able to define additional type parameters to accommodate the class or classes that you could not include in this constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e7a7e-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e7a7e-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1d890-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1d890-110">See also</span></span>
 
-- [<span data-ttu-id="e7a7e-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e7a7e-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="1d890-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1d890-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
