--- a/docs/visual-basic/misc/bc32049.md
+++ b/docs/visual-basic/misc/bc32049.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro già dichiarato con il nome di tipo '<typeparametername>'
+title: Parametro di tipo già dichiarato con il nome ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32049
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC32049
 ms.assetid: d7affad0-0c3d-4fce-a1c2-a17f65514471
-ms.openlocfilehash: 387c59afd19950de03c074fcf660fa0c19bd733c
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: a8b7a5124a736c6d73ff571c2b331c5bafb4860b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912803"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407236"
 ---
-# <a name="type-parameter-already-declared-with-name-typeparametername"></a><span data-ttu-id="ed272-102">Parametro già dichiarato con il nome di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="ed272-102">Type parameter already declared with name '\<typeparametername>'</span></span>
-<span data-ttu-id="ed272-103">Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un altro parametro di tipo dello stesso tipo generico.</span><span class="sxs-lookup"><span data-stu-id="ed272-103">A type parameter of a generic type is declared with the same name as another type parameter of that same generic type.</span></span>  
+# <a name="type-parameter-already-declared-with-name-typeparametername"></a><span data-ttu-id="975e2-102">Parametro di tipo già dichiarato con il nome ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="975e2-102">Type parameter already declared with name '\<typeparametername>'</span></span>
+<span data-ttu-id="975e2-103">Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un altro parametro di tipo dello stesso tipo generico.</span><span class="sxs-lookup"><span data-stu-id="975e2-103">A type parameter of a generic type is declared with the same name as another type parameter of that same generic type.</span></span>  
   
- <span data-ttu-id="ed272-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="ed272-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
+ <span data-ttu-id="975e2-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="975e2-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
   
-- <span data-ttu-id="ed272-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="ed272-105">Every other type parameter in the same type parameter list,</span></span>  
+- <span data-ttu-id="975e2-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="975e2-105">Every other type parameter in the same type parameter list,</span></span>  
   
-- <span data-ttu-id="ed272-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="ed272-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
+- <span data-ttu-id="975e2-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="975e2-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
   
-- <span data-ttu-id="ed272-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="ed272-107">The name of the generic type itself.</span></span>  
+- <span data-ttu-id="975e2-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="975e2-107">The name of the generic type itself.</span></span>  
   
- <span data-ttu-id="ed272-108">**ID errore:** BC32049</span><span class="sxs-lookup"><span data-stu-id="ed272-108">**Error ID:** BC32049</span></span>  
+ <span data-ttu-id="975e2-108">**ID errore:** BC32049</span><span class="sxs-lookup"><span data-stu-id="975e2-108">**Error ID:** BC32049</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ed272-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ed272-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="975e2-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="975e2-109">To correct this error</span></span>  
   
-- <span data-ttu-id="ed272-110">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="ed272-110">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
+- <span data-ttu-id="975e2-110">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="975e2-110">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ed272-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ed272-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="975e2-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="975e2-111">See also</span></span>
 
-- [<span data-ttu-id="ed272-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ed272-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="ed272-113">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="ed272-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="975e2-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="975e2-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="975e2-113">Type List</span><span class="sxs-lookup"><span data-stu-id="975e2-113">Type List</span></span>](../language-reference/statements/type-list.md)
