--- a/docs/visual-basic/misc/bc32052.md
+++ b/docs/visual-basic/misc/bc32052.md
@@ -1,5 +1,5 @@
 ---
-title: Operando di tipo ' is' '<typeparametername>' è possibile confrontare solo con 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
+title: È possibile confrontare l'operando 'Is' del tipo '<typeparametername>' solo a 'Nothing' perché '<typeparametername>' è un parametro di tipo senza vincoli di classe
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32052
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC32052
 ms.assetid: 0bbf2249-eb0d-4b74-a555-8868c7ebe91d
-ms.openlocfilehash: b086cb242e92802de3fd9c9c7d39280f76fbb227
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 82d76817a7eee2e72a7e3e2ab32f22022c7d062e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645255"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412026"
 ---
-# <a name="is-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="96815-102">Operando di tipo ' is' '\<nomeparametrotipo >' è possibile confrontare solo con 'Nothing' perché '\<nomeparametrotipo >' è un parametro di tipo senza vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="96815-102">'Is' operand of type '\<typeparametername>' can be compared only to 'Nothing' because '\<typeparametername>' is a type parameter with no class constraint</span></span>
-<span data-ttu-id="96815-103">Un parametro di tipo viene utilizzato come operando per il [operatore Is](../../visual-basic/language-reference/operators/is-operator.md) quando il parametro di tipo viene definito senza la [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) parola chiave o un nome di classe specifico nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="96815-103">A type parameter is used as an operand for the [Is Operator](../../visual-basic/language-reference/operators/is-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) keyword or a specific class name in its constraint list.</span></span>  
+# <a name="is-operand-of-type-typeparametername-can-be-compared-only-to-nothing-because-typeparametername-is-a-type-parameter-with-no-class-constraint"></a><span data-ttu-id="0d2be-102">È possibile confrontare l'operando 'Is' del tipo '\<typeparametername>' solo a 'Nothing' perché '\<typeparametername>' è un parametro di tipo senza vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="0d2be-102">'Is' operand of type '\<typeparametername>' can be compared only to 'Nothing' because '\<typeparametername>' is a type parameter with no class constraint</span></span>
+<span data-ttu-id="0d2be-103">Un parametro di tipo viene usato come operando per l' [operatore is](../language-reference/operators/is-operator.md) quando il parametro di tipo viene definito senza la parola chiave [Class (Visual Basic)](../language-reference/statements/class-statement.md) o un nome di classe specifico nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="0d2be-103">A type parameter is used as an operand for the [Is Operator](../language-reference/operators/is-operator.md) when the type parameter is defined without either the [Class (Visual Basic)](../language-reference/statements/class-statement.md) keyword or a specific class name in its constraint list.</span></span>  
   
- <span data-ttu-id="96815-104">`Is` confronta due tipi riferimento per determinare se puntano alla stessa istanza di oggetti in memoria.</span><span class="sxs-lookup"><span data-stu-id="96815-104">`Is` compares two reference types to determine whether they point to the same object instance in memory.</span></span> <span data-ttu-id="96815-105">Non può accettare un operando che non è un tipo riferimento, a meno che l'altro operando [Nothing](../../visual-basic/language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="96815-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../../visual-basic/language-reference/nothing.md).</span></span>  
+ <span data-ttu-id="0d2be-104">`Is` confronta due tipi riferimento per determinare se puntano alla stessa istanza di oggetti in memoria.</span><span class="sxs-lookup"><span data-stu-id="0d2be-104">`Is` compares two reference types to determine whether they point to the same object instance in memory.</span></span> <span data-ttu-id="0d2be-105">Non può assumere un operando che non è un tipo di riferimento, a meno che l'altro operando non sia [null](../language-reference/nothing.md).</span><span class="sxs-lookup"><span data-stu-id="0d2be-105">It cannot take an operand that is not a reference type unless the other operand is [Nothing](../language-reference/nothing.md).</span></span>  
   
- <span data-ttu-id="96815-106">**ID errore:** BC32052</span><span class="sxs-lookup"><span data-stu-id="96815-106">**Error ID:** BC32052</span></span>  
+ <span data-ttu-id="0d2be-106">**ID errore:** BC32052</span><span class="sxs-lookup"><span data-stu-id="0d2be-106">**Error ID:** BC32052</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="96815-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="96815-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0d2be-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0d2be-107">To correct this error</span></span>  
   
-- <span data-ttu-id="96815-108">Se è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, aggiungere la parola chiave `Class` o un nome della classe specifico all'elenco di vincoli per il parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="96815-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
+- <span data-ttu-id="0d2be-108">Se è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, aggiungere la parola chiave `Class` o un nome della classe specifico all'elenco di vincoli per il parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="0d2be-108">If you can require that the type argument supplied to this type parameter always be a reference type, add either the `Class` keyword or a specific class name to the constraint list for the type parameter.</span></span>  
   
-- <span data-ttu-id="96815-109">Se non è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, rimuoverlo dall'espressione `Is` .</span><span class="sxs-lookup"><span data-stu-id="96815-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `Is` expression.</span></span> <span data-ttu-id="96815-110">Non è possibile confrontarlo con altri tipi riferimento con l'operatore `Is` .</span><span class="sxs-lookup"><span data-stu-id="96815-110">You cannot compare it to other reference types with the `Is` operator.</span></span>  
+- <span data-ttu-id="0d2be-109">Se non è possibile richiedere che l'argomento di tipo fornito a questo parametro di tipo sia sempre un tipo riferimento, rimuoverlo dall'espressione `Is` .</span><span class="sxs-lookup"><span data-stu-id="0d2be-109">If you cannot require that the type argument supplied to this type parameter always be a reference type, remove it from the `Is` expression.</span></span> <span data-ttu-id="0d2be-110">Non è possibile confrontarlo con altri tipi riferimento con l'operatore `Is` .</span><span class="sxs-lookup"><span data-stu-id="0d2be-110">You cannot compare it to other reference types with the `Is` operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="96815-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="96815-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0d2be-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0d2be-111">See also</span></span>
 
-- [<span data-ttu-id="96815-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="96815-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="96815-113">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="96815-113">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="96815-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="96815-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [<span data-ttu-id="96815-115">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="96815-115">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="0d2be-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0d2be-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="0d2be-113">Type List</span><span class="sxs-lookup"><span data-stu-id="0d2be-113">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="0d2be-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="0d2be-114">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="0d2be-115">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0d2be-115">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
