--- a/docs/visual-basic/misc/bc32079.md
+++ b/docs/visual-basic/misc/bc32079.md
@@ -7,41 +7,41 @@ f1_keywords:
 helpviewer_keywords:
 - BC32079
 ms.assetid: 93eb59bd-e7db-4f73-a37f-405a83df48c1
-ms.openlocfilehash: cea31dc794a279aa28c56f1c53cc38fd9ffcc18b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cdaa73268fa5150a705a7b6bf2fb9e6daf48a66d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64755995"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407210"
 ---
-# <a name="type-parameters-or-types-constructed-with-type-parameters-are-not-allowed-in-attribute-arguments"></a><span data-ttu-id="16a2b-102">I parametri di tipo o i tipi costruiti con parametri di tipo non sono consentiti negli argomenti di attributo</span><span class="sxs-lookup"><span data-stu-id="16a2b-102">Type parameters or types constructed with type parameters are not allowed in attribute arguments</span></span>
+# <a name="type-parameters-or-types-constructed-with-type-parameters-are-not-allowed-in-attribute-arguments"></a><span data-ttu-id="2415a-102">I parametri di tipo o i tipi costruiti con parametri di tipo non sono consentiti negli argomenti di attributo</span><span class="sxs-lookup"><span data-stu-id="2415a-102">Type parameters or types constructed with type parameters are not allowed in attribute arguments</span></span>
 
-<span data-ttu-id="16a2b-103">È stato applicato un attributo con un argomento che è un parametro di tipo o è costruito con un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="16a2b-103">An attribute is applied using an argument that is either a type parameter or is constructed using a type parameter.</span></span>
+<span data-ttu-id="2415a-103">È stato applicato un attributo con un argomento che è un parametro di tipo o è costruito con un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="2415a-103">An attribute is applied using an argument that is either a type parameter or is constructed using a type parameter.</span></span>
 
-<span data-ttu-id="16a2b-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="16a2b-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="16a2b-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="16a2b-105">This means the following limitations apply:</span></span>
+<span data-ttu-id="2415a-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="2415a-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="2415a-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="2415a-105">This means the following limitations apply:</span></span>
 
-- <span data-ttu-id="16a2b-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="16a2b-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
+- <span data-ttu-id="2415a-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="2415a-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
 
-- <span data-ttu-id="16a2b-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="16a2b-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
+- <span data-ttu-id="2415a-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="2415a-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
 
-- <span data-ttu-id="16a2b-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="16a2b-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
+- <span data-ttu-id="2415a-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="2415a-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
 
-  - <span data-ttu-id="16a2b-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="16a2b-109">A generic type,</span></span>
+  - <span data-ttu-id="2415a-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="2415a-109">A generic type,</span></span>
 
-  - <span data-ttu-id="16a2b-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="16a2b-110">A type constructed from a generic type,</span></span>
+  - <span data-ttu-id="2415a-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="2415a-110">A type constructed from a generic type,</span></span>
 
-  - <span data-ttu-id="16a2b-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="16a2b-111">A type parameter of a containing type, or</span></span>
+  - <span data-ttu-id="2415a-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="2415a-111">A type parameter of a containing type, or</span></span>
 
-  - <span data-ttu-id="16a2b-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="16a2b-112">A type constructed from a type parameter of a containing type.</span></span>
+  - <span data-ttu-id="2415a-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="2415a-112">A type constructed from a type parameter of a containing type.</span></span>
 
-<span data-ttu-id="16a2b-113">**ID errore:** BC32079</span><span class="sxs-lookup"><span data-stu-id="16a2b-113">**Error ID:** BC32079</span></span>
+<span data-ttu-id="2415a-113">**ID errore:** BC32079</span><span class="sxs-lookup"><span data-stu-id="2415a-113">**Error ID:** BC32079</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="16a2b-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="16a2b-114">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="2415a-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2415a-114">To correct this error</span></span>
 
-- <span data-ttu-id="16a2b-115">Ricostruire gli argomenti forniti all'attributo in modo che non includano parametri di tipo o un tipo costruito da un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="16a2b-115">Reconstruct the arguments supplied to the attribute so that they do not include any type parameters or any type constructed from a type parameter.</span></span>
+- <span data-ttu-id="2415a-115">Ricostruire gli argomenti forniti all'attributo in modo che non includano parametri di tipo o un tipo costruito da un parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="2415a-115">Reconstruct the arguments supplied to the attribute so that they do not include any type parameters or any type constructed from a type parameter.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="16a2b-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="16a2b-116">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2415a-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2415a-116">See also</span></span>
 
 - <xref:System.Attribute>
-- [<span data-ttu-id="16a2b-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="16a2b-117">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="16a2b-118">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="16a2b-118">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="2415a-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="2415a-117">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="2415a-118">Type List</span><span class="sxs-lookup"><span data-stu-id="2415a-118">Type List</span></span>](../language-reference/statements/type-list.md)
