--- a/docs/visual-basic/misc/bc32115.md
+++ b/docs/visual-basic/misc/bc32115.md
@@ -1,5 +1,5 @@
 ---
-title: "'System. Nullable' non soddisfa il vincolo 'Structure' per il parametro di tipo '<typeparametername>'"
+title: "' System. Nullable ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' <typeparametername> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32115
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32115
 ms.assetid: 98053645-fa76-4826-a7c1-f1bdf3511863
-ms.openlocfilehash: 0f353ce85f719f6e1b16533ba5a10b511ecf0a00
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d8e762f79df2d3fde989c4fe8409b05f592de2a5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407132"
 ---
-# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="c468e-102">'System. Nullable' non soddisfa il vincolo 'Structure' per il parametro di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="c468e-102">'System.Nullable' does not satisfy the 'Structure' constraint for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="c468e-103">Un tipo generico viene richiamato passando un argomento di tipo di <xref:System.Nullable%601> a un parametro di tipo con un vincolo `Structure` .</span><span class="sxs-lookup"><span data-stu-id="c468e-103">A generic type is invoked passing a type argument of <xref:System.Nullable%601> to a type parameter with a `Structure` constraint.</span></span>  
+# <a name="systemnullable-does-not-satisfy-the-structure-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="da3a9-102">' System. Nullable ' non soddisfa il vincolo ' Structure ' per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="da3a9-102">'System.Nullable' does not satisfy the 'Structure' constraint for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="da3a9-103">Un tipo generico viene richiamato passando un argomento di tipo di <xref:System.Nullable%601> a un parametro di tipo con un vincolo `Structure` .</span><span class="sxs-lookup"><span data-stu-id="da3a9-103">A generic type is invoked passing a type argument of <xref:System.Nullable%601> to a type parameter with a `Structure` constraint.</span></span>  
   
- <span data-ttu-id="c468e-104">Common Language Runtime non consente la struttura <xref:System.Nullable%601> come argomento di tipo di se stessa.</span><span class="sxs-lookup"><span data-stu-id="c468e-104">The common language runtime (CLR) specifically disallows the <xref:System.Nullable%601> structure as a type argument to itself.</span></span> <span data-ttu-id="c468e-105">Anche se si tratta di una struttura e soddisferebbe altrimenti un vincolo `Structure` , il suo uso ricorsivo potrebbe portare alla creazione di costruzioni complesse come `Nullable(Of Nullable(Of Nullable))`.</span><span class="sxs-lookup"><span data-stu-id="c468e-105">Even though it is a structure and would otherwise satisfy a `Structure` constraint, using it recursively could lead to awkward constructions such as `Nullable(Of Nullable(Of Nullable))`.</span></span>  
+ <span data-ttu-id="da3a9-104">Common Language Runtime non consente la struttura <xref:System.Nullable%601> come argomento di tipo di se stessa.</span><span class="sxs-lookup"><span data-stu-id="da3a9-104">The common language runtime (CLR) specifically disallows the <xref:System.Nullable%601> structure as a type argument to itself.</span></span> <span data-ttu-id="da3a9-105">Anche se si tratta di una struttura e soddisferebbe altrimenti un vincolo `Structure` , il suo uso ricorsivo potrebbe portare alla creazione di costruzioni complesse come `Nullable(Of Nullable(Of Nullable))`.</span><span class="sxs-lookup"><span data-stu-id="da3a9-105">Even though it is a structure and would otherwise satisfy a `Structure` constraint, using it recursively could lead to awkward constructions such as `Nullable(Of Nullable(Of Nullable))`.</span></span>  
   
- <span data-ttu-id="c468e-106">**ID errore:** BC32115</span><span class="sxs-lookup"><span data-stu-id="c468e-106">**Error ID:** BC32115</span></span>  
+ <span data-ttu-id="da3a9-106">**ID errore:** BC32115</span><span class="sxs-lookup"><span data-stu-id="da3a9-106">**Error ID:** BC32115</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c468e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c468e-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="da3a9-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="da3a9-107">To correct this error</span></span>  
   
-- <span data-ttu-id="c468e-108">Rimuovere il vincolo `Structure` dal parametro di tipo o modificare l'argomento di tipo in un tipo valore diverso da <xref:System.Nullable%601>.</span><span class="sxs-lookup"><span data-stu-id="c468e-108">Either remove the `Structure` constraint from the type parameter, or change the type argument to some value type other than <xref:System.Nullable%601>.</span></span>  
+- <span data-ttu-id="da3a9-108">Rimuovere il vincolo `Structure` dal parametro di tipo o modificare l'argomento di tipo in un tipo valore diverso da <xref:System.Nullable%601>.</span><span class="sxs-lookup"><span data-stu-id="da3a9-108">Either remove the `Structure` constraint from the type parameter, or change the type argument to some value type other than <xref:System.Nullable%601>.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c468e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c468e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="da3a9-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="da3a9-109">See also</span></span>
 
 - <xref:System.Nullable%601>
-- [<span data-ttu-id="c468e-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="c468e-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="c468e-111">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="c468e-111">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="da3a9-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="da3a9-110">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="da3a9-111">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="da3a9-111">Structure (Visual Basic)</span></span>](../language-reference/statements/structure-statement.md)
