--- a/docs/visual-basic/misc/bc36609.md
+++ b/docs/visual-basic/misc/bc36609.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC36609
 ms.assetid: 8952389a-b5e5-43b2-b765-e56640054e41
-ms.openlocfilehash: 825d80facae74054f55950d228c32e816991b7be
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 509076a62dadc40c30a39bbbf7485c5c9df870c7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61637713"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407028"
 ---
-# <a name="query-expressions-are-not-valid-in-debug-windows"></a><span data-ttu-id="7f37c-102">Le espressioni di query non sono valide nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="7f37c-102">Query expressions are not valid in debug windows</span></span>
-<span data-ttu-id="7f37c-103">Una query LINQ è stata immessa nella finestra **Espressioni di controllo** o nella finestra di **controllo immediato** durante una sessione di debug.</span><span class="sxs-lookup"><span data-stu-id="7f37c-103">A LINQ query has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="7f37c-104">Le query non sono disponibili nelle finestre di debug.</span><span class="sxs-lookup"><span data-stu-id="7f37c-104">Queries are not available in debug windows.</span></span>  
+# <a name="query-expressions-are-not-valid-in-debug-windows"></a><span data-ttu-id="50135-102">Le espressioni di query non sono valide nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="50135-102">Query expressions are not valid in debug windows</span></span>
+<span data-ttu-id="50135-103">Una query LINQ è stata immessa nella finestra **Espressioni di controllo** o nella finestra di **controllo immediato** durante una sessione di debug.</span><span class="sxs-lookup"><span data-stu-id="50135-103">A LINQ query has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="50135-104">Le query non sono disponibili nelle finestre di debug.</span><span class="sxs-lookup"><span data-stu-id="50135-104">Queries are not available in debug windows.</span></span>  
   
- <span data-ttu-id="7f37c-105">**ID errore:** BC36609</span><span class="sxs-lookup"><span data-stu-id="7f37c-105">**Error ID:** BC36609</span></span>  
+ <span data-ttu-id="50135-105">**ID errore:** BC36609</span><span class="sxs-lookup"><span data-stu-id="50135-105">**Error ID:** BC36609</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7f37c-106">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7f37c-106">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="50135-106">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="50135-106">See also</span></span>
 
-- [<span data-ttu-id="7f37c-107">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7f37c-107">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="7f37c-108">LINQ</span><span class="sxs-lookup"><span data-stu-id="7f37c-108">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="50135-107">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="50135-107">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="50135-108">LINQ</span><span class="sxs-lookup"><span data-stu-id="50135-108">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
