--- a/docs/visual-basic/misc/bc36661-bc36658.md
+++ b/docs/visual-basic/misc/bc36661-bc36658.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo<methodname>nel metodo di estensione '' definito in ' typename ' perché non vengono convertiti nello stesso tipo
+title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione '<methodname>' definito in 'typename' perché non vengono convertiti nello stesso tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36658
@@ -10,23 +10,23 @@ helpviewer_keywords:
 - BC36661
 - BC36658
 ms.assetid: 0bff97fd-cbe9-4433-8192-6498c6fb5d04
-ms.openlocfilehash: 60e7646d4d69d2a2ab3c45e3f31b62311e47c4cc
-ms.sourcegitcommit: f20dd18dbcf2275513281f5d9ad7ece6a62644b4
+ms.openlocfilehash: 90404690d9805cc8dc5f96444f4b79d45c4307e1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/30/2019
-ms.locfileid: "68631010"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406989"
 ---
-# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a><span data-ttu-id="8663f-102">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo\<nel metodo di estensione ' methodName >' definito in ' typename ' perché non vengono convertiti nello stesso tipo</span><span class="sxs-lookup"><span data-stu-id="8663f-102">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in 'typename' cannot be inferred from these arguments because they do not convert to the same type</span></span>
+# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a><span data-ttu-id="efa0c-102">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione '\<methodname>' definito in 'typename' perché non vengono convertiti nello stesso tipo</span><span class="sxs-lookup"><span data-stu-id="efa0c-102">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in 'typename' cannot be inferred from these arguments because they do not convert to the same type</span></span>
 
-<span data-ttu-id="8663f-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo\<nel metodo di estensione ' methodName >' definito in ' typename ' perché non vengono convertiti nello stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="8663f-103">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in 'typename' cannot be inferred from these arguments because they do not convert to the same type.</span></span> <span data-ttu-id="8663f-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="8663f-104">Specifying the data type(s) explicitly might correct this error.</span></span>
+<span data-ttu-id="efa0c-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo di estensione ' \<methodname> ' definito in ' typename ' perché non vengono convertiti nello stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="efa0c-103">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in 'typename' cannot be inferred from these arguments because they do not convert to the same type.</span></span> <span data-ttu-id="efa0c-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="efa0c-104">Specifying the data type(s) explicitly might correct this error.</span></span>
 
-<span data-ttu-id="8663f-105">Si è provato a usare l'inferenza del tipo per determinare il tipo (o i tipi) di dati del parametro (o dei parametri) di tipo durante la valutazione di una chiamata a un metodo di estensione generico.</span><span class="sxs-lookup"><span data-stu-id="8663f-105">An attempt has been made to use type inference to determine the data type (or types) of the type parameter (or parameters) when evaluating a call to a generic extension method.</span></span> <span data-ttu-id="8663f-106">Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="8663f-106">The compiler could not find a data type that meets the constraints of all the arguments.</span></span> <span data-ttu-id="8663f-107">Di conseguenza, ha segnalato questo errore.</span><span class="sxs-lookup"><span data-stu-id="8663f-107">Therefore, it reported this error.</span></span>
+<span data-ttu-id="efa0c-105">Si è provato a usare l'inferenza del tipo per determinare il tipo (o i tipi) di dati del parametro (o dei parametri) di tipo durante la valutazione di una chiamata a un metodo di estensione generico.</span><span class="sxs-lookup"><span data-stu-id="efa0c-105">An attempt has been made to use type inference to determine the data type (or types) of the type parameter (or parameters) when evaluating a call to a generic extension method.</span></span> <span data-ttu-id="efa0c-106">Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="efa0c-106">The compiler could not find a data type that meets the constraints of all the arguments.</span></span> <span data-ttu-id="efa0c-107">Di conseguenza, ha segnalato questo errore.</span><span class="sxs-lookup"><span data-stu-id="efa0c-107">Therefore, it reported this error.</span></span>
 
 > [!NOTE]
-> <span data-ttu-id="8663f-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="8663f-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>
+> <span data-ttu-id="efa0c-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="efa0c-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>
 
-<span data-ttu-id="8663f-109">Il codice seguente illustra l'errore.</span><span class="sxs-lookup"><span data-stu-id="8663f-109">The following code demonstrates the error.</span></span>
+<span data-ttu-id="efa0c-109">Il codice seguente illustra l'errore.</span><span class="sxs-lookup"><span data-stu-id="efa0c-109">The following code demonstrates the error.</span></span>
 
 ```vb
 Option Strict Off
@@ -50,27 +50,27 @@ Module Module3
 End Module
 ```
 
-<span data-ttu-id="8663f-110">**ID errore:** BC36661 e BC36658</span><span class="sxs-lookup"><span data-stu-id="8663f-110">**Error ID:** BC36661 and BC36658</span></span>
+<span data-ttu-id="efa0c-110">**ID errore:** BC36661 e BC36658</span><span class="sxs-lookup"><span data-stu-id="efa0c-110">**Error ID:** BC36661 and BC36658</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="8663f-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8663f-111">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="efa0c-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="efa0c-111">To correct this error</span></span>
 
-- <span data-ttu-id="8663f-112">Potrebbe essere possibile convertire uno o più argomenti in modo esplicito in un tipo compatibile, come illustrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="8663f-112">You might be able to convert one or more arguments explicitly to a compatible type, as shown in the following code:</span></span>
+- <span data-ttu-id="efa0c-112">Potrebbe essere possibile convertire uno o più argomenti in modo esplicito in un tipo compatibile, come illustrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="efa0c-112">You might be able to convert one or more arguments explicitly to a compatible type, as shown in the following code:</span></span>
 
   ```vb
   c1.targetMethod(19, #3/4/2007#.ToOADate)
   ```
 
-- <span data-ttu-id="8663f-113">Potrebbe essere possibile specificare un tipo di dati per il parametro o i parametri di tipo in cui vengono convertiti gli argomenti, come illustrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="8663f-113">You might be able to specify a data type for the type parameter or parameters to which the arguments convert, as shown in the following code:</span></span>
+- <span data-ttu-id="efa0c-113">Potrebbe essere possibile specificare un tipo di dati per il parametro o i parametri di tipo in cui vengono convertiti gli argomenti, come illustrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="efa0c-113">You might be able to specify a data type for the type parameter or parameters to which the arguments convert, as shown in the following code:</span></span>
 
   ```vb
   c1.targetMethod(Of String)(19, #3/4/2007#)
   ```
 
-## <a name="see-also"></a><span data-ttu-id="8663f-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8663f-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="efa0c-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="efa0c-114">See also</span></span>
 
-- [<span data-ttu-id="8663f-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="8663f-115">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="8663f-116">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="8663f-116">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [<span data-ttu-id="8663f-117">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8663f-117">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="8663f-118">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="8663f-118">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
-- [<span data-ttu-id="8663f-119">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="8663f-119">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [<span data-ttu-id="8663f-120">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8663f-120">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="efa0c-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="efa0c-115">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="efa0c-116">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="efa0c-116">Relaxed Delegate Conversion</span></span>](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="efa0c-117">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="efa0c-117">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="efa0c-118">CString</span><span class="sxs-lookup"><span data-stu-id="efa0c-118">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="efa0c-119">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="efa0c-119">Implicit and Explicit Conversions</span></span>](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="efa0c-120">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="efa0c-120">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
