--- a/docs/visual-basic/misc/bc40040.md
+++ b/docs/visual-basic/misc/bc40040.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo di vincolo il parametro generico <typename> non è conforme a CLS
+title: Il tipo di vincolo <typename> per il parametro generico non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40040
@@ -7,42 +7,42 @@ f1_keywords:
 helpviewer_keywords:
 - BC40040
 ms.assetid: c640dd59-56a9-43ed-b199-32a60f7b9b06
-ms.openlocfilehash: 6b9b9966ec073b7e3032b5a1dbdd5a545b95ad4e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c9fff9c42c6de90376f4e6ea951a5315d800ff9c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84403589"
 ---
-# <a name="generic-parameter-constraint-type-typename-is-not-cls-compliant"></a><span data-ttu-id="98343-102">Il tipo di vincolo il parametro generico \<typename > non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="98343-102">Generic parameter constraint type \<typename> is not CLS-compliant</span></span>
-<span data-ttu-id="98343-103">Un tipo generico viene contrassegnato come `<CLSCompliant(True)>`, ma un vincolo su uno dei suoi parametri di tipo consente di specificare un tipo contrassegnato come `<CLSCompliant(False)>`, non contrassegnato o che non si qualifica in quanto è di tipo non compatibile.</span><span class="sxs-lookup"><span data-stu-id="98343-103">A generic type is marked as `<CLSCompliant(True)>`, but a constraint on one of its type parameters specifies a type that is marked as `<CLSCompliant(False)>`, is not marked, or does not qualify because it is a noncompliant type.</span></span>  
+# <a name="generic-parameter-constraint-type-typename-is-not-cls-compliant"></a><span data-ttu-id="75cb4-102">Il tipo di vincolo \<typename> per il parametro generico non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="75cb4-102">Generic parameter constraint type \<typename> is not CLS-compliant</span></span>
+<span data-ttu-id="75cb4-103">Un tipo generico viene contrassegnato come `<CLSCompliant(True)>`, ma un vincolo su uno dei suoi parametri di tipo consente di specificare un tipo contrassegnato come `<CLSCompliant(False)>`, non contrassegnato o che non si qualifica in quanto è di tipo non compatibile.</span><span class="sxs-lookup"><span data-stu-id="75cb4-103">A generic type is marked as `<CLSCompliant(True)>`, but a constraint on one of its type parameters specifies a type that is marked as `<CLSCompliant(False)>`, is not marked, or does not qualify because it is a noncompliant type.</span></span>  
   
- <span data-ttu-id="98343-104">Per un tipo è conforme con la [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), è necessario utilizzare solo tipi conformi a CLS.</span><span class="sxs-lookup"><span data-stu-id="98343-104">For a type to be compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), it must use only CLS-compliant types.</span></span> <span data-ttu-id="98343-105">Questo vale anche per i vincoli sui parametri di tipo di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="98343-105">This applies also to the constraints on the type parameters of a generic type.</span></span>  
+ <span data-ttu-id="75cb4-104">Affinché un tipo sia compatibile con l'indipendenza del [linguaggio e i componenti indipendenti dal linguaggio](../../standard/language-independence-and-language-independent-components.md) (CLS), deve utilizzare solo tipi conformi a CLS.</span><span class="sxs-lookup"><span data-stu-id="75cb4-104">For a type to be compliant with the [Language Independence and Language-Independent Components](../../standard/language-independence-and-language-independent-components.md) (CLS), it must use only CLS-compliant types.</span></span> <span data-ttu-id="75cb4-105">Questo vale anche per i vincoli sui parametri di tipo di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="75cb4-105">This applies also to the constraints on the type parameters of a generic type.</span></span>  
   
- <span data-ttu-id="98343-106">I seguenti tipi di dati di Visual Basic non sono conformi a CLS:</span><span class="sxs-lookup"><span data-stu-id="98343-106">The following Visual Basic data types are not CLS-compliant:</span></span>  
+ <span data-ttu-id="75cb4-106">I tipi di dati Visual Basic seguenti non sono conformi a CLS:</span><span class="sxs-lookup"><span data-stu-id="75cb4-106">The following Visual Basic data types are not CLS-compliant:</span></span>  
   
-- [<span data-ttu-id="98343-107">Tipo di dati SByte</span><span class="sxs-lookup"><span data-stu-id="98343-107">SByte Data Type</span></span>](../../visual-basic/language-reference/data-types/sbyte-data-type.md)  
+- [<span data-ttu-id="75cb4-107">Tipo di dati SByte</span><span class="sxs-lookup"><span data-stu-id="75cb4-107">SByte Data Type</span></span>](../language-reference/data-types/sbyte-data-type.md)  
   
-- [<span data-ttu-id="98343-108">Tipo di dati UInteger</span><span class="sxs-lookup"><span data-stu-id="98343-108">UInteger Data Type</span></span>](../../visual-basic/language-reference/data-types/uinteger-data-type.md)  
+- [<span data-ttu-id="75cb4-108">Tipo di dati UInteger</span><span class="sxs-lookup"><span data-stu-id="75cb4-108">UInteger Data Type</span></span>](../language-reference/data-types/uinteger-data-type.md)  
   
-- [<span data-ttu-id="98343-109">Tipo di dati ULong</span><span class="sxs-lookup"><span data-stu-id="98343-109">ULong Data Type</span></span>](../../visual-basic/language-reference/data-types/ulong-data-type.md)  
+- [<span data-ttu-id="75cb4-109">Tipo di dati ULong</span><span class="sxs-lookup"><span data-stu-id="75cb4-109">ULong Data Type</span></span>](../language-reference/data-types/ulong-data-type.md)  
   
-- [<span data-ttu-id="98343-110">Tipo di dati UShort</span><span class="sxs-lookup"><span data-stu-id="98343-110">UShort Data Type</span></span>](../../visual-basic/language-reference/data-types/ushort-data-type.md)  
+- [<span data-ttu-id="75cb4-110">Tipo di dati UShort</span><span class="sxs-lookup"><span data-stu-id="75cb4-110">UShort Data Type</span></span>](../language-reference/data-types/ushort-data-type.md)  
   
- <span data-ttu-id="98343-111">Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="98343-111">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="98343-112">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="98343-112">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="75cb4-111">Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="75cb4-111">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="75cb4-112">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="75cb4-112">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="98343-113">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="98343-113">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="75cb4-113">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="75cb4-113">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="98343-114">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="98343-114">By default, this message is a warning.</span></span> <span data-ttu-id="98343-115">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="98343-115">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="75cb4-114">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="75cb4-114">By default, this message is a warning.</span></span> <span data-ttu-id="75cb4-115">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="75cb4-115">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="98343-116">**ID errore:** BC40040</span><span class="sxs-lookup"><span data-stu-id="98343-116">**Error ID:** BC40040</span></span>  
+ <span data-ttu-id="75cb4-116">**ID errore:** BC40040</span><span class="sxs-lookup"><span data-stu-id="75cb4-116">**Error ID:** BC40040</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="98343-117">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="98343-117">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="75cb4-117">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="75cb4-117">To correct this error</span></span>  
   
-- <span data-ttu-id="98343-118">Se il tipo generico deve prendere un parametro di tipo vincolato da questo tipo particolare, rimuovere <xref:System.CLSCompliantAttribute>.</span><span class="sxs-lookup"><span data-stu-id="98343-118">If the generic type must take a type parameter constrained by this particular type, remove <xref:System.CLSCompliantAttribute>.</span></span> <span data-ttu-id="98343-119">Il tipo non può essere compatibile con CLS.</span><span class="sxs-lookup"><span data-stu-id="98343-119">The type cannot be CLS-compliant.</span></span>  
+- <span data-ttu-id="75cb4-118">Se il tipo generico deve prendere un parametro di tipo vincolato da questo tipo particolare, rimuovere <xref:System.CLSCompliantAttribute>.</span><span class="sxs-lookup"><span data-stu-id="75cb4-118">If the generic type must take a type parameter constrained by this particular type, remove <xref:System.CLSCompliantAttribute>.</span></span> <span data-ttu-id="75cb4-119">Il tipo non può essere compatibile con CLS.</span><span class="sxs-lookup"><span data-stu-id="75cb4-119">The type cannot be CLS-compliant.</span></span>  
   
-- <span data-ttu-id="98343-120">Se il tipo generico deve essere compatibile con CLS, modificare il tipo di questo vincolo al tipo con una compatibilità con CLS più vicina.</span><span class="sxs-lookup"><span data-stu-id="98343-120">If the generic type must be CLS-compliant, change the type of this constraint to the closest CLS-compliant type.</span></span> <span data-ttu-id="98343-121">Al posto di `UInteger` ad esempio può essere possibile usare `Integer` se non è necessario l'intervallo di valore al di sopra di 2.147.483.647.</span><span class="sxs-lookup"><span data-stu-id="98343-121">For example, in place of `UInteger` you might be able to use `Integer` if you do not need the value range above 2,147,483,647.</span></span> <span data-ttu-id="98343-122">Se è necessario l'intervallo esteso, è possibile sostituire `UInteger` con `Long`.</span><span class="sxs-lookup"><span data-stu-id="98343-122">If you do need the extended range, you can replace `UInteger` with `Long`.</span></span>  
+- <span data-ttu-id="75cb4-120">Se il tipo generico deve essere compatibile con CLS, modificare il tipo di questo vincolo al tipo con una compatibilità con CLS più vicina.</span><span class="sxs-lookup"><span data-stu-id="75cb4-120">If the generic type must be CLS-compliant, change the type of this constraint to the closest CLS-compliant type.</span></span> <span data-ttu-id="75cb4-121">Al posto di `UInteger` ad esempio può essere possibile usare `Integer` se non è necessario l'intervallo di valore al di sopra di 2.147.483.647.</span><span class="sxs-lookup"><span data-stu-id="75cb4-121">For example, in place of `UInteger` you might be able to use `Integer` if you do not need the value range above 2,147,483,647.</span></span> <span data-ttu-id="75cb4-122">Se è necessario l'intervallo esteso, è possibile sostituire `UInteger` con `Long`.</span><span class="sxs-lookup"><span data-stu-id="75cb4-122">If you do need the extended range, you can replace `UInteger` with `Long`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="98343-123">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="98343-123">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="75cb4-123">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="75cb4-123">See also</span></span>
 
-- [<span data-ttu-id="98343-124">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="98343-124">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="75cb4-124">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="75cb4-124">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
