--- a/docs/visual-basic/misc/bc40048.md
+++ b/docs/visual-basic/misc/bc40048.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
+title: Il parametro '<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40048
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC40048
 ms.assetid: d5428b36-88d3-42c4-a096-cbc7bb9571f2
-ms.openlocfilehash: 9fef1ac3e7b245da733697898b118e9760b3092c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2e0a56f26838deba494e900b1f7ba4629af725d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632248"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402369"
 ---
-# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a><span data-ttu-id="dbbaf-102">Parametro di tipo '\<nomeparametrotipo >' ha lo stesso nome di un parametro di tipo di un tipo di inclusione</span><span class="sxs-lookup"><span data-stu-id="dbbaf-102">Type parameter '\<typeparametername>' has the same name as a type parameter of an enclosing type</span></span>
-<span data-ttu-id="dbbaf-103">Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un parametro di tipo di un tipo generico contenitore.</span><span class="sxs-lookup"><span data-stu-id="dbbaf-103">A type parameter of a generic type is declared with the same name as a type parameter of a containing generic type.</span></span>  
+# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a><span data-ttu-id="e97f2-102">Il parametro '\<typeparametername>' ha lo stesso nome di un parametro di tipo di un tipo di inclusione</span><span class="sxs-lookup"><span data-stu-id="e97f2-102">Type parameter '\<typeparametername>' has the same name as a type parameter of an enclosing type</span></span>
+<span data-ttu-id="e97f2-103">Un parametro di tipo di un tipo generico è dichiarato con lo stesso nome di un parametro di tipo di un tipo generico contenitore.</span><span class="sxs-lookup"><span data-stu-id="e97f2-103">A type parameter of a generic type is declared with the same name as a type parameter of a containing generic type.</span></span>  
   
- <span data-ttu-id="dbbaf-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="dbbaf-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
+ <span data-ttu-id="e97f2-104">Nell'elenco di parametri di tipo di un tipo generico ogni parametro di tipo deve avere un nome diverso da quello di tutti i nomi seguenti:</span><span class="sxs-lookup"><span data-stu-id="e97f2-104">In the type parameter list of a generic type, each type parameter must have a name distinct from all of the following names:</span></span>  
   
-- <span data-ttu-id="dbbaf-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="dbbaf-105">Every other type parameter in the same type parameter list,</span></span>  
+- <span data-ttu-id="e97f2-105">Ogni altro parametro di tipo nell'elenco di parametri dello stesso tipo,</span><span class="sxs-lookup"><span data-stu-id="e97f2-105">Every other type parameter in the same type parameter list,</span></span>  
   
-- <span data-ttu-id="dbbaf-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="dbbaf-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
+- <span data-ttu-id="e97f2-106">Ogni parametro di tipo nell'elenco dei parametri di tipo di qualsiasi tipo generico contenitore e</span><span class="sxs-lookup"><span data-stu-id="e97f2-106">Every type parameter in the type parameter list of any containing generic type, and</span></span>  
   
-- <span data-ttu-id="dbbaf-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="dbbaf-107">The name of the generic type itself.</span></span>  
+- <span data-ttu-id="e97f2-107">Il nome del tipo generico stesso.</span><span class="sxs-lookup"><span data-stu-id="e97f2-107">The name of the generic type itself.</span></span>  
   
- <span data-ttu-id="dbbaf-108">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="dbbaf-108">By default, this message is a warning.</span></span> <span data-ttu-id="dbbaf-109">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="dbbaf-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="e97f2-108">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="e97f2-108">By default, this message is a warning.</span></span> <span data-ttu-id="e97f2-109">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="e97f2-109">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="dbbaf-110">**ID errore:** BC40048</span><span class="sxs-lookup"><span data-stu-id="dbbaf-110">**Error ID:** BC40048</span></span>  
+ <span data-ttu-id="e97f2-110">**ID errore:** BC40048</span><span class="sxs-lookup"><span data-stu-id="e97f2-110">**Error ID:** BC40048</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dbbaf-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dbbaf-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e97f2-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e97f2-111">To correct this error</span></span>  
   
-- <span data-ttu-id="dbbaf-112">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="dbbaf-112">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
+- <span data-ttu-id="e97f2-112">Rinominare il parametro di tipo in modo che sia diverso da qualsiasi altro nome presente nell'elenco in questa pagina della Guida.</span><span class="sxs-lookup"><span data-stu-id="e97f2-112">Rename the type parameter to be distinct from every name cited in the list on this Help page.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dbbaf-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dbbaf-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e97f2-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e97f2-113">See also</span></span>
 
-- [<span data-ttu-id="dbbaf-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dbbaf-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="dbbaf-115">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="dbbaf-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="e97f2-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e97f2-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="e97f2-115">Type List</span><span class="sxs-lookup"><span data-stu-id="e97f2-115">Type List</span></span>](../language-reference/statements/type-list.md)
