commit translated contents

--- a/docs/visual-basic/misc/bc42014.md
+++ b/docs/visual-basic/misc/bc42014.md
@@ -1,5 +1,5 @@
 ---
-title: "'<baseinterfacename>. ' from ' Implements <derivedinterfacename>' è già implementato dalla classe base '<baseclassname>'. <membername> Prevista nuova implementazione di <type>"
+title: "'<baseinterfacename>.<membername>' da' Implements <derivedinterfacename> ' è già implementato dalla classe base ' <baseclassname> '. Prevista nuova implementazione di <type>"
 ms.date: 07/20/2015
 f1_keywords:
 - bc42014
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC42014
 ms.assetid: 95fff622-5d54-4ec8-90f0-477de1d58687
-ms.openlocfilehash: d02194e58599075e30199349336923002884f2e0
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: dc372df6ce6a550c4add222d7667e640b485067d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660231"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384183"
 ---
-# <a name="baseinterfacenamemembername-from-implements-derivedinterfacename-is-already-implemented-by-the-base-class-baseclassname-re-implementation-of-type-assumed"></a>'\<nomeinterfacciabase >. memberName >' from ' implementa \<nomeinterfacciaderivata >' è già implementato dalla classe base '\<nomeclassebase >'. \< Si presuppone una nuova \<implementazione di tipo >
+# <a name="baseinterfacenamemembername-from-implements-derivedinterfacename-is-already-implemented-by-the-base-class-baseclassname-re-implementation-of-type-assumed"></a>'\<baseinterfacename>.\<membername>' da' Implements \<derivedinterfacename> ' è già implementato dalla classe base ' \<baseclassname> '. Prevista nuova implementazione di \<type>
 Una proprietà, routine o evento di una classe derivata usa una clausola `Implements` che specifica un membro dell'interfaccia derivata già implementato sull'interfaccia di base nella classe base.  
   
  Il membro implementato viene definito dall'interfaccia di base ed ereditato dall'interfaccia derivata. L'interfaccia di base viene implementata direttamente dalla classe base. L'interfaccia derivata viene implementata dalla classe derivata, che può facilmente non rendersi conto che la classe base ha già implementato il membro.  
   
- Una classe derivata può reimplementare un membro di interfaccia implementato dalla sua classe base. Questo non equivale a eseguire l'override dell'implementazione della classe base. Per altre informazioni, vedere [Implements](../../visual-basic/language-reference/statements/implements-clause.md).  
+ Una classe derivata può reimplementare un membro di interfaccia implementato dalla sua classe base. Questo non equivale a eseguire l'override dell'implementazione della classe base. Per altre informazioni, vedere [Implements](../language-reference/statements/implements-clause.md).  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
   
@@ -33,4 +33,4 @@ Una proprietà, routine o evento di una classe derivata usa una clausola `Implem
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
