--- a/docs/visual-basic/misc/bc42018.md
+++ b/docs/visual-basic/misc/bc42018.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operandi di tipo Object usati per l'operatore '<operatorsymbol>'; utilizzare l'operatore 'Is' per verificare l'identità dell'oggetto
+title: Operandi di tipo Object usati per l'operatore '<operatorsymbol>'. Usare l'operatore 'Is' per verificare l'identità dell'oggetto
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42018
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC42018
 ms.assetid: 3fc640a7-7dab-4c14-b25d-a5794dbba59d
-ms.openlocfilehash: db1dadeeac5da98d087892e1a7233673e10a400b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 19bfde2defbedac03cc0f85ef00f025f82e8e4b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627211"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384053"
 ---
-# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-is-operator-to-test-object-identity"></a>Gli operandi di tipo Object usati per l'operatore '\<simbolooperatore >', usare l'operatore 'Is' per verificare l'identità dell'oggetto
-Un'espressione usa l'operatore `=` con uno o entrambi gli operandi dell'operatore di [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).  
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-use-the-is-operator-to-test-object-identity"></a>Operandi di tipo Object usati per l'operatore '\<operatorsymbol>'. Usare l'operatore 'Is' per verificare l'identità dell'oggetto
+Un'espressione usa l'operatore `=` con uno o entrambi gli operandi dell'operatore di [Object Data Type](../language-reference/data-types/object-data-type.md).  
   
- Si consiglia di usare l'operatore `Is` o `IsNot` per determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto. Vedere "Confronto di oggetti" in [Comparison Operators in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md).  
+ Si consiglia di usare l'operatore `Is` o `IsNot` per determinare se due riferimenti a oggetti si riferiscono alla stessa istanza dell'oggetto. Vedere "Confronto di oggetti" in [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md).  
   
  Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione. Espone inoltre l'applicazione a possibili errori di runtime. Ad esempio, se si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e si prova a usarlo con l'operatore `=` , il runtime genera <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un tipo di dati appropriato per il confronto di valori. Anche se entrambi gli operandi restituiscono il tipo <xref:System.Windows.Forms.Form>, l'operazione non riesce perché `=` non è definito per gli operandi <xref:System.Windows.Forms.Form> .  
   
@@ -31,7 +31,7 @@ Un'espressione usa l'operatore `=` con uno o entrambi gli operandi dell'operator
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [Operatore Is](../../visual-basic/language-reference/operators/is-operator.md)
-- [Procedura: Determinare se due oggetti sono correlati](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
-- [Procedura: Determinare se due oggetti sono identici](../../visual-basic/programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Operatore Is](../language-reference/operators/is-operator.md)
+- [Procedura: determinare se due oggetti sono correlati](../programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-related.md)
+- [Procedura: determinare se due oggetti sono identici](../programming-guide/language-features/variables/how-to-determine-whether-two-objects-are-identical.md)
