--- a/docs/visual-basic/misc/bc30101.md
+++ b/docs/visual-basic/misc/bc30101.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30101
 ms.assetid: 16a0dc29-3657-4373-b77f-38f3cb80e6c9
-ms.openlocfilehash: 269c7d70d3269d8251ed22bfd61c482bed1caa87
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7d9a77f90148c62fbfef34edee4a914882573b2e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64584079"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359426"
 ---
 # <a name="branching-out-of-a-finally-is-not-valid"></a>La creazione di rami all'esterno di 'Finally' non è valida
 Un'istruzione `GoTo` all'interno di un blocco `Finally` crea rami all'esterno del blocco. La creazione di rami all'interno o all'esterno di un blocco `Catch` o `Finally` non è consentita.  
@@ -25,6 +25,6 @@ Un'istruzione `GoTo` all'interno di un blocco `Finally` crea rami all'esterno de
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
-- [Istruzione GoTo](../../visual-basic/language-reference/statements/goto-statement.md)
-- [Flusso di controllo](../../visual-basic/programming-guide/language-features/control-flow/index.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione GoTo](../language-reference/statements/goto-statement.md)
+- [Flusso di controllo](../programming-guide/language-features/control-flow/index.md)
