--- a/docs/visual-basic/misc/bc30622.md
+++ b/docs/visual-basic/misc/bc30622.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30622
 ms.assetid: f5d412ae-3265-4e69-b513-d402730bf575
-ms.openlocfilehash: ff29d34ba5c8538170019aa1f686f4b4f35c6013
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ab172440ad642ff77dc1ec30cf64f5bd349c02c6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646740"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401199"
 ---
 # <a name="end-module-must-be-preceded-by-a-matching-module"></a>'End Module' deve essere preceduto da un oggetto 'Module' corrispondente
 I blocchi del modulo iniziano con un'istruzione `Module` e terminano con un costrutto `End Module` .  
@@ -25,4 +25,4 @@ I blocchi del modulo iniziano con un'istruzione `Module` e terminano con un cost
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
