--- a/docs/visual-basic/misc/bc30681.md
+++ b/docs/visual-basic/misc/bc30681.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30681
 ms.assetid: 05a0402b-da68-4ab8-b6d6-940379bc5973
-ms.openlocfilehash: 0bac181e74a81639147bc6512cc2d00da1888932
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: f2b829f08e39ddd27d6583e35a92acbaae1e0b95
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61958743"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414777"
 ---
 # <a name="region-statement-must-end-with-a-matching-end-region"></a>L'istruzione '#Region' deve terminare con un '#End Region' corrispondente
-Usare il `#Region` direttiva per specificare un blocco di codice che è possibile espandere o comprimere durante l'uso della funzionalità di struttura dell'Editor di codice di Visual Studio. L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.  
+Usare la `#Region` direttiva per specificare un blocco di codice che è possibile espandere o comprimere quando si usa la funzionalità di struttura dell'Editor Visual Studio Code. L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.  
   
  **ID errore:** BC30681  
   
@@ -25,4 +25,4 @@ Usare il `#Region` direttiva per specificare un blocco di codice che è possibil
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttiva #Region](../../visual-basic/language-reference/directives/region-directive.md)
+- [#Region (direttiva)](../language-reference/directives/region-directive.md)
