--- a/docs/visual-basic/misc/bc31152.md
+++ b/docs/visual-basic/misc/bc31152.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31152
 ms.assetid: c2fd26c8-56d5-4bc0-86d1-230cf165d8c0
-ms.openlocfilehash: 1b721345d98c9ddb9a76bba7bb3d012a4b978f2f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b622e46ea962337dbbb339b52a7b52ffcd48a47c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64591926"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408854"
 ---
 # <a name="xml-namespace-prefix-prefix-is-reserved-for-use-by-xml-and-the-namespace-uri-cannot-be-changed"></a>L'utilizzo del prefisso dello spazio dei nomi XML 'prefix' è riservato a XML. Impossibile modificare l'URI dello spazio dei nomi
 Un prefisso dello spazio dei nomi XML riservato, ad esempio `xmlns`, è stato usato in un valore letterale XML.  
@@ -25,5 +25,5 @@ Un prefisso dello spazio dei nomi XML riservato, ad esempio `xmlns`, è stato us
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
