--- a/docs/visual-basic/misc/bc32024.md
+++ b/docs/visual-basic/misc/bc32024.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32024
 ms.assetid: 73689803-2584-4aaa-bf12-34158f176240
-ms.openlocfilehash: ed3458427da1305ab88a9db13ebbebc1ec60d2e2
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: a59b35a3b9ef20faf143aa7c71f84042ffe7e770
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913181"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407509"
 ---
 # <a name="default-values-cannot-be-supplied-for-parameters-that-are-not-declared-optional"></a>Impossibile specificare i valori predefiniti per i parametri che non sono dichiarati 'Optional'
 Quando si chiama la routine, è necessario specificare gli argomenti obbligatori che non accettano valori predefiniti nella dichiarazione.  
@@ -25,5 +25,5 @@ Quando si chiama la routine, è necessario specificare gli argomenti obbligatori
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri facoltativi](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
-- [Optional](../../visual-basic/language-reference/modifiers/optional.md)
+- [Parametri facoltativi](../programming-guide/language-features/procedures/optional-parameters.md)
+- [Facoltativo](../language-reference/modifiers/optional.md)
