--- a/docs/visual-basic/misc/bc42019.md
+++ b/docs/visual-basic/misc/bc42019.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operandi di tipo Object usati per l'operatore '<operatorsymbol>'; potrebbero verificarsi errori di runtime
+title: Operandi di tipo Object usati per l'operatore'<operatorsymbol>'. Potrebbero verificarsi errori di runtime
 ms.date: 07/20/2015
 f1_keywords:
 - BC42019
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC42019
 ms.assetid: f61944ba-863b-4a82-aae4-249bda52ec8d
-ms.openlocfilehash: ce6f50e837720424cdcf4cf7c5b9efdef64f832c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b0da48567e882b3f08422a3b4f037118e3e837fb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64751256"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84383884"
 ---
-# <a name="operands-of-type-object-used-for-operator-operatorsymbol-runtime-errors-could-occur"></a>Gli operandi di tipo Object usati per l'operatore '\<simbolooperatore >'; potrebbero verificarsi errori di runtime
-Un'espressione usa un operatore in cui uno o entrambi gli operandi sono del [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).  
+# <a name="operands-of-type-object-used-for-operator-operatorsymbol-runtime-errors-could-occur"></a>Operandi di tipo Object usati per l'operatore'\<operatorsymbol>'. Potrebbero verificarsi errori di runtime
+Un'espressione usa un operatore in cui uno o entrambi gli operandi sono del [Object Data Type](../language-reference/data-types/object-data-type.md).  
   
- Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione. Espone inoltre l'applicazione a possibili errori di runtime. Si supponga, ad esempio, di assegnare <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi di provare a usarla con l' [/ Operator (Visual Basic)](../../visual-basic/language-reference/operators/floating-point-division-operator.md). In questo caso il runtime genera un'eccezione <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.  
+ Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione. Espone inoltre l'applicazione a possibili errori di runtime. Si supponga, ad esempio, di assegnare <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi di provare a usarla con l' [/ Operator (Visual Basic)](../language-reference/operators/floating-point-division-operator.md). In questo caso il runtime genera un'eccezione <xref:System.InvalidCastException> perché Visual Basic non può convertire un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
   
@@ -29,4 +29,4 @@ Un'espressione usa un operatore in cui uno o entrambi gli operandi sono del [Obj
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori aritmetici in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
+- [Operatori aritmetici in Visual Basic](../programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
